versions/v4.1.0/doxygen/html/globals_h.md
---
version: v4.1.0
source_url: https://docs.zephyrproject.org/4.1.0/doxygen/html/globals_h.html
original_path: doxygen/html/globals_h.html
---

| Logo | Zephyr API Documentation 4.1.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all functions, variables, defines, enums, and typedefs with links to the files they belong to:

### - h -

- HACTLR\_BUSTIMEOUTR\_BIT : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#a7d34434117254b1745ff62a40f850455)
- HACTLR\_CDBGDCI : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#af6034c7fd77f1096314b8753ddd83621)
- HACTLR\_CPUACTLR : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#a367fbf6725426a0cb44a01cd7d3bbac4)
- HACTLR\_ERR\_BIT : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#ae245fc7db7d6db0279d6da680de1981f)
- HACTLR\_FLASHIFREGIONR : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#a6161c9da01ec5a54597681bc187e2c40)
- HACTLR\_INIT : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#aa417d6d641a116d5e2d3eaf6a56b1cc8)
- HACTLR\_INTMONR\_BIT : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#a4f2b59b38069f9b4ddcd879bd666a9df)
- HACTLR\_PERIPHPREGIONR : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#a054011b021f935829db1fe81688a2efa)
- HACTLR\_QOSR\_BIT : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#ada072a55f7ba6970e29472d7ca78d967)
- haptics\_start\_output() : [haptics.h](group__haptics__interface.md#ga96e0b0fad35d6535adad7536a9411f44)
- haptics\_start\_output\_t : [haptics.h](group__haptics__interface.md#gaa6c2ff4b8ed7ae83e4006eb735f61a46)
- haptics\_stop\_output() : [haptics.h](group__haptics__interface.md#ga42a5fc7e6b6247316cdf356573dbbb33)
- haptics\_stop\_output\_t : [haptics.h](group__haptics__interface.md#gae34e538c40e259967f5791cc5ebd2707)
- hard\_reset() : [qspi\_if.h](qspi__if_8h.md#afb4a6c00361cf7109799350d3b27ad83)
- HARD\_RESET\_RECEIVED : [usbc.h](group____usbc__device__api.md#gga66f934a5c5cd88b574c71d1f18fbda23ab74f5bcaa94a5fb1e46cdd7c6a5d822f)
- HAS\_BUILTIN : [toolchain.h](toolchain_8h.md#a474a719388efd0578c7c98a0961e23dd)
- hash\_algo : [hash.h](group__crypto__hash.md#gaaea88501aa8243eacc8c57ac0914ac7a)
- hash\_begin\_session() : [crypto.h](group__crypto__hash.md#ga9b736d047cbfb7530ffa0bc4b64d6ad1)
- hash\_callback\_set() : [crypto.h](group__crypto__hash.md#gaa69bbf41cc150dae0d97b215862729cf)
- hash\_completion\_cb : [hash.h](group__crypto__hash.md#ga1f49008c35d9f04b66e587d1b43404bd)
- hash\_compute() : [crypto.h](group__crypto__hash.md#ga761e5d0bda9937d7fa4550c876a1c387)
- hash\_free\_session() : [crypto.h](group__crypto__hash.md#gadafcd2ad79e0695245c8884b6b282508)
- hash\_op\_t : [hash.h](group__crypto__hash.md#ga955369c6da6aa70ded229d8861292070)
- hash\_update() : [crypto.h](group__crypto__hash.md#gaf54ee20fb1ca58764f6f301739c3ba93)
- HAWKBIT\_ALLOC\_ERROR : [hawkbit.h](group__hawkbit.md#gga96c59c754178451d8dbd08b32813220bacee282923e7435b81794ccec9749ce01)
- hawkbit\_autohandler() : [autohandler.h](group__hawkbit__autohandler.md#ga41865255aa3020a34816c23ae7977f20)
- hawkbit\_autohandler\_cancel() : [autohandler.h](group__hawkbit__autohandler.md#gabc27308bb974d6e0b9650476243e5e9a)
- hawkbit\_autohandler\_set\_delay() : [autohandler.h](group__hawkbit__autohandler.md#ga47fe3e9cd227fd4da332e9eeff81f991)
- hawkbit\_autohandler\_wait() : [autohandler.h](group__hawkbit__autohandler.md#ga6d13b3d7b9a61d06a6eaa346189a08c6)
- hawkbit\_config\_device\_data\_cb\_handler\_t : [hawkbit.h](group__hawkbit.md#ga2774769ec44f2793895b5d783b4dceda)
- HAWKBIT\_DOWNLOAD\_ERROR : [hawkbit.h](group__hawkbit.md#gga96c59c754178451d8dbd08b32813220baf1a448b0addfc769515c725ce5b1bab9)
- hawkbit\_event\_add\_callback() : [event.h](group__hawkbit__event.md#ga646c72464b0761009f42393fa313c880)
- HAWKBIT\_EVENT\_BEFORE\_REBOOT : [event.h](group__hawkbit__event.md#gga794d232d73d105bd170b222ab17ce2afa27254d0c181c7736de5fa9c281fc92cf)
- hawkbit\_event\_callback\_handler\_t : [event.h](group__hawkbit__event.md#ga49064aef93c5383f24ea41819b78c458)
- HAWKBIT\_EVENT\_CANCEL\_UPDATE : [event.h](group__hawkbit__event.md#gga794d232d73d105bd170b222ab17ce2afae7cbf7ba78059186080e633965244e8b)
- HAWKBIT\_EVENT\_CREATE\_CALLBACK : [event.h](group__hawkbit__event.md#ga05eec89437dfd13a022ba2eac6b1e0d9)
- HAWKBIT\_EVENT\_END\_DOWNLOAD : [event.h](group__hawkbit__event.md#gga794d232d73d105bd170b222ab17ce2afa9f01289c7aa75e335e1fb8b05e5ec984)
- HAWKBIT\_EVENT\_END\_RUN : [event.h](group__hawkbit__event.md#gga794d232d73d105bd170b222ab17ce2afa0b5b571646812e7b31953899d512b4e2)
- HAWKBIT\_EVENT\_ERROR : [event.h](group__hawkbit__event.md#gga794d232d73d105bd170b222ab17ce2afa4ab9fcb6bebf167eff6fb2311da735dd)
- HAWKBIT\_EVENT\_ERROR\_ALLOC : [event.h](group__hawkbit__event.md#gga794d232d73d105bd170b222ab17ce2afa0a6f33bbaeff8c0e3b1c6aba0cdf0639)
- HAWKBIT\_EVENT\_ERROR\_DOWNLOAD : [event.h](group__hawkbit__event.md#gga794d232d73d105bd170b222ab17ce2afa70e2d5b23859484b758c446d0e7c624c)
- HAWKBIT\_EVENT\_ERROR\_METADATA : [event.h](group__hawkbit__event.md#gga794d232d73d105bd170b222ab17ce2afafc267582eeed1249830e888e0f8a6bd8)
- HAWKBIT\_EVENT\_ERROR\_NETWORKING : [event.h](group__hawkbit__event.md#gga794d232d73d105bd170b222ab17ce2afad8ed1ca4798bcd479f11d613a20e2214)
- HAWKBIT\_EVENT\_ERROR\_PERMISSION : [event.h](group__hawkbit__event.md#gga794d232d73d105bd170b222ab17ce2afa435e07a36fec3d4a1d94926d8caa9d7a)
- hawkbit\_event\_init\_callback() : [event.h](group__hawkbit__event.md#ga0ec141ff3e11c0e1d0e3f8757ace5010)
- HAWKBIT\_EVENT\_NO\_UPDATE : [event.h](group__hawkbit__event.md#gga794d232d73d105bd170b222ab17ce2afa516265be2515ca5f1b95517b04d0522e)
- hawkbit\_event\_remove\_callback() : [event.h](group__hawkbit__event.md#gaa19bb74cb46e9aff7742907a86c96359)
- HAWKBIT\_EVENT\_START\_DOWNLOAD : [event.h](group__hawkbit__event.md#gga794d232d73d105bd170b222ab17ce2afaaa1680961ce8487c98dc4299003b0b55)
- HAWKBIT\_EVENT\_START\_RUN : [event.h](group__hawkbit__event.md#gga794d232d73d105bd170b222ab17ce2afab6e6a48faa3ed32b8fef2b4cce4c29d3)
- hawkbit\_event\_type : [event.h](group__hawkbit__event.md#ga794d232d73d105bd170b222ab17ce2af)
- HAWKBIT\_EVENT\_UPDATE\_DOWNLOADED : [event.h](group__hawkbit__event.md#gga794d232d73d105bd170b222ab17ce2afa645bec5a542a24f3696241921f89d3a4)
- hawkbit\_get\_action\_id() : [config.h](group__hawkbit__config.md#ga0ca5f633e902137ecda068ab312d52db)
- hawkbit\_get\_config() : [config.h](group__hawkbit__config.md#gaae46014585251b53afe726d42475d739)
- hawkbit\_get\_ddi\_security\_token() : [config.h](group__hawkbit__config.md#gadc4aea2dac4915a434a10e6e055f54f7)
- hawkbit\_get\_device\_identity\_cb\_handler\_t : [hawkbit.h](group__hawkbit.md#ga154220c632a7594c0630cdcd79385055)
- hawkbit\_get\_poll\_interval() : [config.h](group__hawkbit__config.md#ga46c56cee1a89abd81a328ef3f91648bb)
- hawkbit\_get\_server\_addr() : [config.h](group__hawkbit__config.md#gacbbaed38e2ace7d8dcc78e40b286b5e9)
- hawkbit\_get\_server\_port() : [config.h](group__hawkbit__config.md#ga3674fc406aa20fe4770ff0c729817b7c)
- hawkbit\_get\_tls\_tag() : [config.h](group__hawkbit__config.md#ga694e5f4fbcae451eb90a019f6d1f3b81)
- hawkbit\_init() : [hawkbit.h](group__hawkbit.md#ga0ef6151f205088405de242e012984ca6)
- HAWKBIT\_METADATA\_ERROR : [hawkbit.h](group__hawkbit.md#gga96c59c754178451d8dbd08b32813220ba2b7d188d8c28a3373d9b8a7f831b1e3a)
- HAWKBIT\_NETWORKING\_ERROR : [hawkbit.h](group__hawkbit.md#gga96c59c754178451d8dbd08b32813220ba5a36eadcadc43c1fd0936a8546fb15e8)
- HAWKBIT\_NO\_RESPONSE : [hawkbit.h](group__hawkbit.md#gga96c59c754178451d8dbd08b32813220baa18639f74548a317808b24c702f2fcb9)
- HAWKBIT\_NO\_UPDATE : [hawkbit.h](group__hawkbit.md#gga96c59c754178451d8dbd08b32813220bac73c46deb3e54dba690f814a2fb9db71)
- HAWKBIT\_NOT\_INITIALIZED : [hawkbit.h](group__hawkbit.md#gga96c59c754178451d8dbd08b32813220bac4ba42120229e92b52c82d4a4d4cd708)
- HAWKBIT\_PERMISSION\_ERROR : [hawkbit.h](group__hawkbit.md#gga96c59c754178451d8dbd08b32813220ba1d79e6fe8487cc4dc36c6c91bcabd124)
- hawkbit\_probe() : [hawkbit.h](group__hawkbit.md#ga525173f0c3d0ca4e26124a34d098d0b9)
- HAWKBIT\_PROBE\_IN\_PROGRESS : [hawkbit.h](group__hawkbit.md#gga96c59c754178451d8dbd08b32813220ba28ccbb4060d41592884829cf205414f6)
- hawkbit\_reboot() : [hawkbit.h](group__hawkbit.md#ga03631b12a4107d660bac14bfd33bfebd)
- hawkbit\_reset\_action\_id() : [hawkbit.h](group__hawkbit.md#ga26f0066c87c57b500170ac377b560bb4)
- hawkbit\_response : [hawkbit.h](group__hawkbit.md#ga96c59c754178451d8dbd08b32813220b)
- hawkbit\_set\_config() : [config.h](group__hawkbit__config.md#ga5e6a1e2e49b75a44a9f13f059ed7d3f6)
- hawkbit\_set\_custom\_data\_cb() : [hawkbit.h](group__hawkbit.md#gad8e83255a969eb61244b1edfd0b95e5d)
- hawkbit\_set\_ddi\_security\_token() : [config.h](group__hawkbit__config.md#gaa2799669246cc817bb8e294a8fbfb3d2)
- hawkbit\_set\_device\_identity\_cb() : [hawkbit.h](group__hawkbit.md#ga4ce085b8f2bb46af2c2e9f3f2879d633)
- hawkbit\_set\_server\_addr() : [config.h](group__hawkbit__config.md#gaa49efdafe94e1d36a537aff962df41d5)
- hawkbit\_set\_server\_port() : [config.h](group__hawkbit__config.md#ga78ef6a168132940040ad04498f0b462d)
- hawkbit\_set\_tls\_tag() : [config.h](group__hawkbit__config.md#ga5c73e9ba4dd9788e22fdb11f1f2b81ee)
- HAWKBIT\_UNCONFIRMED\_IMAGE : [hawkbit.h](group__hawkbit.md#gga96c59c754178451d8dbd08b32813220bad4b0587da0bdfd829d0d08ed2407357d)
- HAWKBIT\_UPDATE\_INSTALLED : [hawkbit.h](group__hawkbit.md#gga96c59c754178451d8dbd08b32813220ba9f5a200928474863a88d170c11594048)
- HCI\_PKT\_TYPE\_ESCO\_2EV3 : [hci\_types.h](hci__types_8h.md#a1ccc4d6e5cfc560b7e2cb80c4c386607)
- HCI\_PKT\_TYPE\_ESCO\_2EV5 : [hci\_types.h](hci__types_8h.md#a1252be2692bcfb7a1256c63c4deed15d)
- HCI\_PKT\_TYPE\_ESCO\_3EV3 : [hci\_types.h](hci__types_8h.md#ac5f09e3db1bc4d697ff705802e9ec3a0)
- HCI\_PKT\_TYPE\_ESCO\_3EV5 : [hci\_types.h](hci__types_8h.md#aa45e51b1be89505fe599bc7983fcb950)
- HCI\_PKT\_TYPE\_ESCO\_EV3 : [hci\_types.h](hci__types_8h.md#a9530e916a0cf905e2185cd021320bfff)
- HCI\_PKT\_TYPE\_ESCO\_EV4 : [hci\_types.h](hci__types_8h.md#a3e0b6a1aa3818cb0c36f7883fd361c7e)
- HCI\_PKT\_TYPE\_ESCO\_EV5 : [hci\_types.h](hci__types_8h.md#a1f7474cb16a495bd81dc1f23d4103f70)
- HCI\_PKT\_TYPE\_HV1 : [hci\_types.h](hci__types_8h.md#aecb5b3886467c41baf979d01d8bde4a1)
- HCI\_PKT\_TYPE\_HV2 : [hci\_types.h](hci__types_8h.md#ae68633ce74639ec6f06d5ef4feee2d09)
- HCI\_PKT\_TYPE\_HV3 : [hci\_types.h](hci__types_8h.md#aecd04ca27f536a1cb15aacf9ee80aba8)
- HCI\_PKT\_TYPE\_SCO\_HV1 : [hci\_types.h](hci__types_8h.md#a4b048addd84409867177a97c785c4a73)
- HCI\_PKT\_TYPE\_SCO\_HV2 : [hci\_types.h](hci__types_8h.md#a98f8217b27c0b9b7817c86520da45018)
- HCI\_PKT\_TYPE\_SCO\_HV3 : [hci\_types.h](hci__types_8h.md#af67cdc23b6542e6d8323f14e17c7171d)
- hci\_vs\_err\_assert() : [hci\_vs.h](hci__vs_8h.md#afc9ea0e4f2260bf59336f2c66532d9b1)
- hci\_vs\_err\_stack\_frame() : [hci\_vs.h](hci__vs_8h.md#aa90c2106bbb977f1ea8532212ff01b4d)
- hci\_vs\_err\_trace() : [hci\_vs.h](hci__vs_8h.md#a9a91c493cc947492d5a172a15abe9a4e)
- HCR\_AMO\_BIT : [cpu.h](arm64_2cpu_8h.md#ad67b4ccd0f2888823525fcc71ea76419)
- HCR\_FMO\_BIT : [cpu.h](arm64_2cpu_8h.md#a223d70f2acad7d361ee6fb7b44bdb2e5)
- HCR\_IMO\_BIT : [cpu.h](arm64_2cpu_8h.md#a1792be817d3129a78d60d8bf0d1e5689)
- HCR\_RW\_BIT : [cpu.h](arm64_2cpu_8h.md#a2ecb1fa994da111656e57828a2fb5015)
- HCR\_TGE\_BIT : [cpu.h](arm64_2cpu_8h.md#a5d2f11fc2059239829db563c8a2bbafe)
- hdlc\_rx\_callback\_t : [hdlc\_rcp\_if.h](hdlc__rcp__if_8h.md#a58fa03009f99c7927c930b06fd1dfd0e)
- HE\_GI\_1600NS : [off\_raw\_tx\_api.h](group__nrf70__off__raw__tx__api.md#gga7cc32e6229ddd41db7d310f29a3fc09da7fad526cc4b6544d13f688395229336f)
- HE\_GI\_3200NS : [off\_raw\_tx\_api.h](group__nrf70__off__raw__tx__api.md#gga7cc32e6229ddd41db7d310f29a3fc09da14c3bac543f5c886265a22bb77f47b71)
- HE\_GI\_800NS : [off\_raw\_tx\_api.h](group__nrf70__off__raw__tx__api.md#gga7cc32e6229ddd41db7d310f29a3fc09da991485bf09a58a8f9b1751d5c0781598)
- HE\_GI\_MAX : [off\_raw\_tx\_api.h](group__nrf70__off__raw__tx__api.md#gga7cc32e6229ddd41db7d310f29a3fc09da132ff7b3dfe33b1f49f7c5e87b95264c)
- HE\_LTF\_12800NS : [off\_raw\_tx\_api.h](group__nrf70__off__raw__tx__api.md#gga87b545520cdcc2ed387ebed770420c61a204188c45996539fa1b6141ed40f3448)
- HE\_LTF\_3200NS : [off\_raw\_tx\_api.h](group__nrf70__off__raw__tx__api.md#gga87b545520cdcc2ed387ebed770420c61ae6ec0118f3e5c10892790e2cbea4d701)
- HE\_LTF\_6400NS : [off\_raw\_tx\_api.h](group__nrf70__off__raw__tx__api.md#gga87b545520cdcc2ed387ebed770420c61ab3d148ec3de601ae0b10538edf1bb7e2)
- HE\_LTF\_MAX : [off\_raw\_tx\_api.h](group__nrf70__off__raw__tx__api.md#gga87b545520cdcc2ed387ebed770420c61ae0b112fb129512eeef0bebc6956281cd)
- HEADER\_FUNC\_DESC : [usb\_cdc.h](usb__cdc_8h.md#a008b7d343c5a1876a78c885f7a496b66)
- health\_srv\_meta : [shell.h](bluetooth_2mesh_2shell_8h.md#a5ccd2d0b4a3ff642a89fcd77dd0e935f)
- HEAP\_ALLOC : [heap\_listener.h](group__heap__listener__apis.md#gga9679320e1c32dcbad726789946565510a23ece0bd476a164e251ebd1af61f0008)
- heap\_event\_types : [heap\_listener.h](group__heap__listener__apis.md#ga9679320e1c32dcbad726789946565510)
- HEAP\_EVT\_UNKNOWN : [heap\_listener.h](group__heap__listener__apis.md#gga9679320e1c32dcbad726789946565510ae82b3e0225bde5553f472c5f00985b18)
- HEAP\_FREE : [heap\_listener.h](group__heap__listener__apis.md#gga9679320e1c32dcbad726789946565510a82e2137ada931f068fa36d40245f5a80)
- HEAP\_ID\_FROM\_POINTER : [heap\_listener.h](group__heap__listener__apis.md#ga77e603053a5b69caae2a49e441a525c0)
- HEAP\_ID\_LIBC : [heap\_listener.h](group__heap__listener__apis.md#ga7627d1b500bb7e833770c99071f9255d)
- heap\_listener\_alloc\_cb\_t : [heap\_listener.h](group__heap__listener__apis.md#ga325f3d6679f9bc6d6d1b2e98c8efd2f6)
- HEAP\_LISTENER\_ALLOC\_DEFINE : [heap\_listener.h](group__heap__listener__apis.md#ga1854b23cbd41dec0d8262e8f122ebd5d)
- heap\_listener\_free\_cb\_t : [heap\_listener.h](group__heap__listener__apis.md#ga8a2e3c13b898647618ba93cd592e406f)
- HEAP\_LISTENER\_FREE\_DEFINE : [heap\_listener.h](group__heap__listener__apis.md#ga7e5822ebd4c08235b01cf99cd6fe10e8)
- heap\_listener\_notify\_alloc() : [heap\_listener.h](group__heap__listener__apis.md#gaebe49e01cba6d327c635da4795e37e22)
- heap\_listener\_notify\_free() : [heap\_listener.h](group__heap__listener__apis.md#ga8fd3dc5b65e3bc8bbc1dadaa741d47fc)
- heap\_listener\_notify\_resize() : [heap\_listener.h](group__heap__listener__apis.md#ga9d3062fbcdc10edc3839193e8ea79654)
- heap\_listener\_register() : [heap\_listener.h](group__heap__listener__apis.md#ga63d5470d9ca312ccc80d35c7f8dea200)
- heap\_listener\_resize\_cb\_t : [heap\_listener.h](group__heap__listener__apis.md#gad8addd23bfb3f303c10c13024a8c29ce)
- HEAP\_LISTENER\_RESIZE\_DEFINE : [heap\_listener.h](group__heap__listener__apis.md#gaa4fa9685749e050ca06e7cdc99b7c970)
- heap\_listener\_unregister() : [heap\_listener.h](group__heap__listener__apis.md#ga872e123af0a5349e45fcedfd8b83b508)
- HEAP\_MAX\_EVENTS : [heap\_listener.h](group__heap__listener__apis.md#gga9679320e1c32dcbad726789946565510afb3a6f56a29d74c35db90fbeaa61a3b6)
- HEAP\_REALLOC : [heap\_listener.h](group__heap__listener__apis.md#gga9679320e1c32dcbad726789946565510aa64f229b21eedbca9a581b60e3da5a50)
- HEAP\_RESIZE : [heap\_listener.h](group__heap__listener__apis.md#gga9679320e1c32dcbad726789946565510a198aa2475e58078a46cf79ffb0914408)
- hex2bin() : [util.h](group__sys-util.md#ga269a01ffa3f1a3485b79d8a54a78a3f1)
- hex2char() : [util.h](group__sys-util.md#ga9ed3bd04d5c0797aebf333733913028c)
- HFP\_HF\_CMD\_CME\_ERROR : [hfp\_hf.h](group__bt__hfp.md#ga80133496d4868f11381d14fe46cfdb51)
- HFP\_HF\_CMD\_ERROR : [hfp\_hf.h](group__bt__hfp.md#ga463b8eb680e7cbedfbf9c5e5628558af)
- HFP\_HF\_CMD\_OK : [hfp\_hf.h](group__bt__hfp.md#ga7c90e2ab7ed6c5b25252f88408235598)
- HFP\_HF\_CMD\_UNKNOWN\_ERROR : [hfp\_hf.h](group__bt__hfp.md#ga613fa4c3e102c7ab20e587f34c14d5c6)
- HFRC\_EXT\_P26 : [ambiq-apollo4-pinctrl.h](ambiq-apollo4-pinctrl_8h.md#a22151075c9c0c0d69cc8141839f1a310)
- HFXO0\_BUFOUTREQINASYNC\_PA0 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#af3d9d425c19fc9f1c56b16a2ce3ca69b), [xg24-pinctrl.h](xg24-pinctrl_8h.md#af3d9d425c19fc9f1c56b16a2ce3ca69b)
- HFXO0\_BUFOUTREQINASYNC\_PA1 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#ae0120388287c3f60a6190eda52121f0e), [xg24-pinctrl.h](xg24-pinctrl_8h.md#ae0120388287c3f60a6190eda52121f0e)
- HFXO0\_BUFOUTREQINASYNC\_PA10 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a8f3ea3c9f889417511fa12e8ee2a3148)
- HFXO0\_BUFOUTREQINASYNC\_PA2 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#af4852125e31ddddd1fed1fdacf153e02), [xg24-pinctrl.h](xg24-pinctrl_8h.md#af4852125e31ddddd1fed1fdacf153e02)
- HFXO0\_BUFOUTREQINASYNC\_PA3 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a25681d36b593b30263243a6cc5a319b1), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a25681d36b593b30263243a6cc5a319b1)
- HFXO0\_BUFOUTREQINASYNC\_PA4 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a25093f4fd8152b2a499f78117b860d0c), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a25093f4fd8152b2a499f78117b860d0c)
- HFXO0\_BUFOUTREQINASYNC\_PA5 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#aa6ce87ffb49361ab8876afa308d75777), [xg24-pinctrl.h](xg24-pinctrl_8h.md#aa6ce87ffb49361ab8876afa308d75777)
- HFXO0\_BUFOUTREQINASYNC\_PA6 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#ae0b89336110416cebaa0a1e899daa562), [xg24-pinctrl.h](xg24-pinctrl_8h.md#ae0b89336110416cebaa0a1e899daa562)
- HFXO0\_BUFOUTREQINASYNC\_PA7 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a4fe6a622e71c24bd3203fcb7f1ee0037), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a4fe6a622e71c24bd3203fcb7f1ee0037)
- HFXO0\_BUFOUTREQINASYNC\_PA8 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a26c5fbf9b20f95ea89a36640e4cad757), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a26c5fbf9b20f95ea89a36640e4cad757)
- HFXO0\_BUFOUTREQINASYNC\_PA9 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a35a6e2e7cf644a3b80df8d1739ef35da), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a35a6e2e7cf644a3b80df8d1739ef35da)
- HFXO0\_BUFOUTREQINASYNC\_PB0 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#adc4fb29901bb4530d24f18598041e248), [xg24-pinctrl.h](xg24-pinctrl_8h.md#adc4fb29901bb4530d24f18598041e248)
- HFXO0\_BUFOUTREQINASYNC\_PB1 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a30174f1bc16727689379ce617ffa2696), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a30174f1bc16727689379ce617ffa2696)
- HFXO0\_BUFOUTREQINASYNC\_PB2 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#aca249022c7464cf1062124bd3ab7d399), [xg24-pinctrl.h](xg24-pinctrl_8h.md#aca249022c7464cf1062124bd3ab7d399)
- HFXO0\_BUFOUTREQINASYNC\_PB3 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a0b069b62a4387a9819b03652bf123130), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a0b069b62a4387a9819b03652bf123130)
- HFXO0\_BUFOUTREQINASYNC\_PB4 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a3959e7648de41ada54851249af0e776f), [xg24-pinctrl.h](xg24-pinctrl_8h.md#a3959e7648de41ada54851249af0e776f)
- HFXO0\_BUFOUTREQINASYNC\_PB5 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#aacf5c309e16b253413b98de57e5640ba), [xg24-pinctrl.h](xg24-pinctrl_8h.md#aacf5c309e16b253413b98de57e5640ba)
- HFXO0\_BUFOUTREQINASYNC\_PB6 : [xg23-pinctrl.h](xg23-pinctrl_8h.md#a48c18b8dd0051aab19ad2088d66534b2)
- hi : [asm-macro-32-bit-gnu.h](asm-macro-32-bit-gnu_8h.md#a0ef89636f8d03ae88717291e66d59527), [asm-macro-64-bit-gnu.h](asm-macro-64-bit-gnu_8h.md#a0ef89636f8d03ae88717291e66d59527)
- HID\_BOOT\_IFACE\_CODE\_KEYBOARD : [hid.h](group__usb__hid__definitions.md#ga6e6276ae88c414e10c602d5e041738ab)
- HID\_BOOT\_IFACE\_CODE\_MOUSE : [hid.h](group__usb__hid__definitions.md#ga900873d4834ea511a08b08debe62bedf)
- HID\_BOOT\_IFACE\_CODE\_NONE : [hid.h](group__usb__hid__definitions.md#ga953074178d707cd3538da80f36a96ff6)
- hid\_cb\_t : [usb\_hid.h](group__usb__hid__device__api.md#ga04ec088255198d1597df8d70db6257ee)
- HID\_COLLECTION : [hid.h](group__usb__hid__items.md#gad010ed98662b0e653754caff1dfd352f)
- HID\_COLLECTION\_APPLICATION : [hid.h](group__usb__hid__definitions.md#ga2e5e5ad0919fbaea0e6f8e5d86f4c2fd)
- HID\_COLLECTION\_LOGICAL : [hid.h](group__usb__hid__definitions.md#ga904a372a663bd7d9205402a3a014c04b)
- HID\_COLLECTION\_MODIFIER : [hid.h](group__usb__hid__definitions.md#gaabc1c6bed23b88f4cdc89d5347595d4f)
- HID\_COLLECTION\_NAMED\_ARRAY : [hid.h](group__usb__hid__definitions.md#ga8e1610365a1556adf7121cc3b1f83080)
- HID\_COLLECTION\_PHYSICAL : [hid.h](group__usb__hid__definitions.md#gaca1e227f9241c217b8b1aeae6c4bd672)
- HID\_COLLECTION\_REPORT : [hid.h](group__usb__hid__definitions.md#gac58ab4780c054754b7f94ff97a152694)
- HID\_COLLECTION\_USAGE\_SWITCH : [hid.h](group__usb__hid__definitions.md#ga64af797e424ea1e2c02c745f30721e48)
- hid\_device\_register() : [usbd\_hid.h](group__usbd__hid__device.md#gabb4502a7c3ab5d2400c039549577f4d0)
- hid\_device\_submit\_report() : [usbd\_hid.h](group__usbd__hid__device.md#ga547f99b1089a4d65a297faa5d6e8edd8)
- HID\_END\_COLLECTION : [hid.h](group__usb__hid__items.md#ga6cd6affb9d52e0bf98c7a5c83d03a764)
- HID\_FEATURE : [hid.h](group__usb__hid__items.md#ga951a415e05e95492250d4fb43a37090d)
- hid\_idle\_cb\_t : [usb\_hid.h](group__usb__hid__device__api.md#ga61b4facfbfb729159135f5c7534ca593)
- HID\_INPUT : [hid.h](group__usb__hid__items.md#ga8646699330c45fb008d50b54be339c6c)
- hid\_int\_ep\_read() : [usb\_hid.h](group__usb__hid__device__api.md#ga7d1b97dd70c25c816a2c78447be13c84)
- hid\_int\_ep\_write() : [usb\_hid.h](group__usb__hid__device__api.md#ga9d82d48c9c6c94ad90e01f44c1f0e72b)
- hid\_int\_ready\_callback : [usb\_hid.h](group__usb__hid__device__api.md#gaed433e24f8487d4e451d9f9daa08c5b0)
- HID\_ITEM : [hid.h](group__usb__hid__items.md#ga4e9dc6652402e0b87e1313c143737ed4)
- HID\_ITEM\_TAG\_COLLECTION : [hid.h](group__usb__hid__definitions.md#ga2c06052593b060466f4c338a88319485)
- HID\_ITEM\_TAG\_COLLECTION\_END : [hid.h](group__usb__hid__definitions.md#ga3f4fe1817887966f0d05aa597cd0ab79)
- HID\_ITEM\_TAG\_FEATURE : [hid.h](group__usb__hid__definitions.md#gaeadcca849f0a0923d9a70605c44464a6)
- HID\_ITEM\_TAG\_INPUT : [hid.h](group__usb__hid__definitions.md#ga66e1c50fe814fd05d61dce12ce3888c1)
- HID\_ITEM\_TAG\_LOGICAL\_MAX : [hid.h](group__usb__hid__definitions.md#gaab6aec72cca41670464605d6970ad553)
- HID\_ITEM\_TAG\_LOGICAL\_MIN : [hid.h](group__usb__hid__definitions.md#ga034033b1ae6f4677aef82d4243c6f712)
- HID\_ITEM\_TAG\_OUTPUT : [hid.h](group__usb__hid__definitions.md#ga70c32518a6b538831e821ad30022679b)
- HID\_ITEM\_TAG\_PHYSICAL\_MAX : [hid.h](group__usb__hid__definitions.md#gaa68bd8a73cee33d810484f4aa3f30e92)
- HID\_ITEM\_TAG\_PHYSICAL\_MIN : [hid.h](group__usb__hid__definitions.md#ga6dfdd60d0b985d683a58ad752d3ef3c3)
- HID\_ITEM\_TAG\_REPORT\_COUNT : [hid.h](group__usb__hid__definitions.md#ga1847701703130ce8f57547811f28b2b4)
- HID\_ITEM\_TAG\_REPORT\_ID : [hid.h](group__usb__hid__definitions.md#ga76cd3a266ae5d5e29292d93caceece72)
- HID\_ITEM\_TAG\_REPORT\_SIZE : [hid.h](group__usb__hid__definitions.md#ga0e6d7a56593bd25a5e15683e9271bb19)
- HID\_ITEM\_TAG\_UNIT : [hid.h](group__usb__hid__definitions.md#ga98267b4ff28f435d67d2a7bf1055fc7c)
- HID\_ITEM\_TAG\_UNIT\_EXPONENT : [hid.h](group__usb__hid__definitions.md#ga7c6d81ee211814ec9b5d17f95e57639b)
- HID\_ITEM\_TAG\_USAGE : [hid.h](group__usb__hid__definitions.md#gaefd616ecaa8fc8762e65ec9d7b01f0cd)
- HID\_ITEM\_TAG\_USAGE\_MAX : [hid.h](group__usb__hid__definitions.md#gac2a0aff74caff6c03511fc0b6db6167b)
- HID\_ITEM\_TAG\_USAGE\_MIN : [hid.h](group__usb__hid__definitions.md#ga4e6f4133f12276f4f9fa51ab06580676)
- HID\_ITEM\_TAG\_USAGE\_PAGE : [hid.h](group__usb__hid__definitions.md#ga73f58fa37c0bf6698463b9d31c8a511f)
- HID\_ITEM\_TYPE\_GLOBAL : [hid.h](group__usb__hid__definitions.md#ga8e56e8090f1af7aae473e8a8b6832fb8)
- HID\_ITEM\_TYPE\_LOCAL : [hid.h](group__usb__hid__definitions.md#ga0bfb0e326d9a01072c029cba788d6456)
- HID\_ITEM\_TYPE\_MAIN : [hid.h](group__usb__hid__definitions.md#ga9a71248c522943951b5af70ec9c14c02)
- hid\_kbd\_code : [hid.h](group__usb__hid__mk__report__desc.md#ga4f2bb15109c64695f852afd6bd99e3bf)
- hid\_kbd\_led : [hid.h](group__usb__hid__mk__report__desc.md#ga8cef56ba216d0a01c6cc89f723d1740b)
- HID\_KBD\_LED\_CAPS\_LOCK : [hid.h](group__usb__hid__mk__report__desc.md#gga8cef56ba216d0a01c6cc89f723d1740baa17e5130bd8c45eb21661d8783517266)
- HID\_KBD\_LED\_COMPOSE : [hid.h](group__usb__hid__mk__report__desc.md#gga8cef56ba216d0a01c6cc89f723d1740bad62692e71ae45351311c8bf2ce13e3c9)
- HID\_KBD\_LED\_KANA : [hid.h](group__usb__hid__mk__report__desc.md#gga8cef56ba216d0a01c6cc89f723d1740bafd5d599c1955bdb1c62c7b17286b37f1)
- HID\_KBD\_LED\_NUM\_LOCK : [hid.h](group__usb__hid__mk__report__desc.md#gga8cef56ba216d0a01c6cc89f723d1740ba6cb2e1acb52cc5bab8dd3aa6ef6ac01b)
- HID\_KBD\_LED\_SCROLL\_LOCK : [hid.h](group__usb__hid__mk__report__desc.md#gga8cef56ba216d0a01c6cc89f723d1740ba6ea943f59b98680aefd0d5be4ef22e36)
- hid\_kbd\_modifier : [hid.h](group__usb__hid__mk__report__desc.md#ga12f11556b697518b00fa86eb040f9eb8)
- HID\_KBD\_MODIFIER\_LEFT\_ALT : [hid.h](group__usb__hid__mk__report__desc.md#gga12f11556b697518b00fa86eb040f9eb8a829d884291b546c0e276afa4ad92ac18)
- HID\_KBD\_MODIFIER\_LEFT\_CTRL : [hid.h](group__usb__hid__mk__report__desc.md#gga12f11556b697518b00fa86eb040f9eb8a4df663509a05599fd66657cfc90a37c7)
- HID\_KBD\_MODIFIER\_LEFT\_SHIFT : [hid.h](group__usb__hid__mk__report__desc.md#gga12f11556b697518b00fa86eb040f9eb8aba69ca183306d3d1427b66666803e57f)
- HID\_KBD\_MODIFIER\_LEFT\_UI : [hid.h](group__usb__hid__mk__report__desc.md#gga12f11556b697518b00fa86eb040f9eb8a718c92a2d0ca9dd6603825b97a99fc77)
- HID\_KBD\_MODIFIER\_NONE : [hid.h](group__usb__hid__mk__report__desc.md#gga12f11556b697518b00fa86eb040f9eb8a79b0eb4f485bedb745180f1b8798c603)
- HID\_KBD\_MODIFIER\_RIGHT\_ALT : [hid.h](group__usb__hid__mk__report__desc.md#gga12f11556b697518b00fa86eb040f9eb8a85ce29a6ab9feef68350deca92001db2)
- HID\_KBD\_MODIFIER\_RIGHT\_CTRL : [hid.h](group__usb__hid__mk__report__desc.md#gga12f11556b697518b00fa86eb040f9eb8a8e346c0e9c7d5b58e4b8748380423a92)
- HID\_KBD\_MODIFIER\_RIGHT\_SHIFT : [hid.h](group__usb__hid__mk__report__desc.md#gga12f11556b697518b00fa86eb040f9eb8affdba298e8860b000a0916be7495c2dc)
- HID\_KBD\_MODIFIER\_RIGHT\_UI : [hid.h](group__usb__hid__mk__report__desc.md#gga12f11556b697518b00fa86eb040f9eb8a1b4b75cd0364824cbfc80dfc68e294dd)
- HID\_KEY\_0 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa856ca663233681e789ef4aa94c44ebaf)
- HID\_KEY\_1 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa039ced168420140b97e2d0676e1bb12a)
- HID\_KEY\_2 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfae98dd71460def5e66fcf32e9783b96ea)
- HID\_KEY\_3 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaf58d848786f8d2dfac702f7fae178311)
- HID\_KEY\_4 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa17019d72e84302486f72f7d8101baca5)
- HID\_KEY\_5 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaf32ab36da2e30066c9ed2816596011c8)
- HID\_KEY\_6 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfae16b76c1bf9f7aa58a1b1c556a6b6022)
- HID\_KEY\_7 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa5887a1854f7d0787121bd75034cdd726)
- HID\_KEY\_8 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa1761228849d7dc2b84d0565d3337b2e2)
- HID\_KEY\_9 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa758aec2540a6a2153702d6905c44ce52)
- HID\_KEY\_A : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa5413afa6a28a21dd52f07db101f2d139)
- HID\_KEY\_APOSTROPHE : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa7325a5bd52e9dc0cc38a85609b1c55ab)
- HID\_KEY\_B : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfabb0b25fe8c201dc75b72c7b078f745d6)
- HID\_KEY\_BACKSLASH : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa25ba5457bc128593b1624d95ec536182)
- HID\_KEY\_BACKSPACE : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfafd6cf6a44966d518b173df4ed57ae720)
- HID\_KEY\_C : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa932c610512cc99157654c3997bc2b922)
- HID\_KEY\_CAPSLOCK : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa4d40549a59fdcfdd0b2d592a6675bc89)
- HID\_KEY\_COMMA : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaa81aa5b3424f02fdf02295de47b11b19)
- HID\_KEY\_D : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfabc172093417a4c40a7443eee551e9700)
- HID\_KEY\_DELETE : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfae8f5051cb476c3e9253b008094c431fc)
- HID\_KEY\_DOT : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa403fe927ebb0014e2c1b3dc25e1d9779)
- HID\_KEY\_DOWN : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa9e2597c2a109abda1c63c8d5ca5376b3)
- HID\_KEY\_E : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaff7192b9ddd4228e02c44b6fb2d7bf85)
- HID\_KEY\_END : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa8f933f0f6e5a1a3c3cdc1819ffcdce63)
- HID\_KEY\_ENTER : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaeeab6ddad27c449cbc44ca2458912a75)
- HID\_KEY\_EQUAL : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfac8d82858905175ba79c24b0be1b1b1a8)
- HID\_KEY\_ESC : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa763b39fe76a92c4cc1fc32f47d2a760a)
- HID\_KEY\_F : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfacc002ca9f0f3bdc01b4de42d00e5560b)
- HID\_KEY\_F1 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa9642163abbbad8aa5c7088c8529aadd7)
- HID\_KEY\_F10 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfac2c4a3aec85b4d8171de4429ccabbe19)
- HID\_KEY\_F11 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa76bb35a0f71733b0a0f1bd7e3837064c)
- HID\_KEY\_F12 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfab44ba4426c1574f4b296794b7bfe2172)
- HID\_KEY\_F2 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa9ce331f5f41ba3e3e05f485bc2d4138e)
- HID\_KEY\_F3 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa76adde1d9295cf62e7efb35e27911a1e)
- HID\_KEY\_F4 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaa9956a2b95afe1a05fda65db5cc66467)
- HID\_KEY\_F5 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bface9e8d409d981f193f69fc5b29f38ca7)
- HID\_KEY\_F6 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfabc92147e725c8108c18f4e03005afbdc)
- HID\_KEY\_F7 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa1e2eabf8b9fa6cbfea613696b2c4122a)
- HID\_KEY\_F8 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa5092add2863231d273ba60cd583ebe33)
- HID\_KEY\_F9 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa5a09deabde1a3a44378b7de44dad27b6)
- HID\_KEY\_G : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa1eadd56346bbd64b1c33fa5393f65bda)
- HID\_KEY\_GRAVE : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa8b84c64da5b8c5f5d99b86c1cfe09ffc)
- HID\_KEY\_H : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa4bfc341fccde664ec9267af6e705ba0c)
- HID\_KEY\_HASH : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa0d57ce7c99d06ee9b15fef880af075eb)
- HID\_KEY\_HOME : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa5fc1127fe9014018f4831cbf272c883b)
- HID\_KEY\_I : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfafcd25dc5bba218f7097698f8f49fdc45)
- HID\_KEY\_INSERT : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa1e1c320cea0644c3dc38da06c865837b)
- HID\_KEY\_J : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa2a78196208c634941d63429cd1e1df7a)
- HID\_KEY\_K : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa4ceddaaaa90d84f0afb3e1ee9a35a976)
- HID\_KEY\_KP\_0 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa4ae4af2b06f6f2585a598353bfef9af7)
- HID\_KEY\_KP\_1 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa7eea75b0eb4b4f0306daa3e6fccf09e4)
- HID\_KEY\_KP\_2 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa68db65e7002e7cc599394a7eea116e3c)
- HID\_KEY\_KP\_3 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa4210f9a5ae469c8b863b28b9b2d8189d)
- HID\_KEY\_KP\_4 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa48eefeeb48a942eaaa0726bd4a2df01d)
- HID\_KEY\_KP\_5 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa1b8d299d56a0289ae15cbf8c67e36a7c)
- HID\_KEY\_KP\_6 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa90f2c51ad42e335a474061c4d5e4e5a9)
- HID\_KEY\_KP\_7 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa1e191017084fadf830a7394de0e1cc05)
- HID\_KEY\_KP\_8 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfadd7c795e2c9c212a4adeaba904bda447)
- HID\_KEY\_KP\_9 : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bface8d41615c6afd45724f4b6d16238c36)
- HID\_KEY\_KPASTERISK : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaff47eb8157a7118183573e3aefb7df08)
- HID\_KEY\_KPENTER : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfab5b923992d0bdc176f716cd8ace3a66e)
- HID\_KEY\_KPMINUS : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa6fb35c78b12ae434cb7a7280501886e9)
- HID\_KEY\_KPPLUS : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa2cb7852467d2ebd785e2f7556383a883)
- HID\_KEY\_KPSLASH : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa44e83040efab214dcfe462ac0d338e0c)
- HID\_KEY\_L : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaf5de66adc9eb2aa183eab1e23f977894)
- HID\_KEY\_LEFT : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaf7d3c678a8ac31916068a0c5aff54d4b)
- HID\_KEY\_LEFTBRACE : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfac232473666b21ca772c84b68be6c1f3d)
- HID\_KEY\_M : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa4f8174feca1eb72901576c4e24c8f8a9)
- HID\_KEY\_MINUS : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaa59864204064d3e8fac5271b69a7da23)
- HID\_KEY\_N : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfab4d202043e8b0b7a8c2d4c519fd1eb07)
- HID\_KEY\_NUMLOCK : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfafec8c71efd5ee9decd156f0d33739fbe)
- HID\_KEY\_O : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfad8884ef7e77722099e6bd61265f6564c)
- HID\_KEY\_P : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaca0480331288d15eccec9f072f123817)
- HID\_KEY\_PAGEDOWN : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaf7615ff4f608d64ae20a61540d939065)
- HID\_KEY\_PAGEUP : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa2468ac3b37d38b6158cd989ed54bcd8c)
- HID\_KEY\_PAUSE : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa1905733a0fe81f78e0752e3b0bb99c69)
- HID\_KEY\_Q : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa05fb920f8129f57dd350036f17fbe519)
- HID\_KEY\_R : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa037de00c763ae6b270895b7a5f0f57a7)
- HID\_KEY\_RIGHT : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa4c203feb452e3212089e8246b8d75f6c)
- HID\_KEY\_RIGHTBRACE : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaef692bd882621d292255cb99d4697513)
- HID\_KEY\_S : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfae6a84e8474b6c3e8f9f7d344408cfa0b)
- HID\_KEY\_SCROLLLOCK : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfae16bd57629c7aba96a554d0446e83d98)
- HID\_KEY\_SEMICOLON : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa3743f920856a12e726e1be05932c7411)
- HID\_KEY\_SLASH : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa24c2c93a1c895745828311affc011dea)
- HID\_KEY\_SPACE : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaf4fc3d7b4b86f9f095cec624d190ebec)
- HID\_KEY\_SYSRQ : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfae5405b62cb20962cb5864ba6e90a4ab2)
- HID\_KEY\_T : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa893799f48b30c438349335556a0e15b6)
- HID\_KEY\_TAB : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa5a6c79e8ea85f6593c06d19098d69a03)
- HID\_KEY\_U : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfab3c7c9f3a73e83623c651cdfddddeb05)
- HID\_KEY\_UP : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaf5fe431b55adf16d82604e0fc2239090)
- HID\_KEY\_V : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa02f14e6303b4d2e4e46747324d649dda)
- HID\_KEY\_W : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfadf81a88f3f92f15e2abec83911bf3732)
- HID\_KEY\_X : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa9f3b8bb63f6628db9a1678b72ec12b6d)
- HID\_KEY\_Y : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfa4ca2ebe26c09f2400a8ebc0aa445ce89)
- HID\_KEY\_Z : [hid.h](group__usb__hid__mk__report__desc.md#gga4f2bb15109c64695f852afd6bd99e3bfaa5cd01ad23ede98de1ae176920b8fc8f)
- HID\_KEYBOARD\_REPORT\_DESC : [hid.h](group__usb__hid__mk__report__desc.md#gaea973ffbe1612187c90614133956cfd6)
- HID\_LOGICAL\_MAX16 : [hid.h](group__usb__hid__items.md#ga9b804d676812dcfb0ec12f3aa887e37f)
- HID\_LOGICAL\_MAX32 : [hid.h](group__usb__hid__items.md#gae9d17e753685b0df6c53f942ce9c95d2)
- HID\_LOGICAL\_MAX8 : [hid.h](group__usb__hid__items.md#ga2f6b809ae85b6716ade8c52da4fa56af)
- HID\_LOGICAL\_MIN16 : [hid.h](group__usb__hid__items.md#ga5e290798d55bccd7474dbfb6bc2d1033)
- HID\_LOGICAL\_MIN32 : [hid.h](group__usb__hid__items.md#gad4b2ff8642676d692fd0d56ab0cbeaa7)
- HID\_LOGICAL\_MIN8 : [hid.h](group__usb__hid__items.md#gacd141f6ede5122f260cd50338649d458)
- HID\_MOUSE\_REPORT\_DESC : [hid.h](group__usb__hid__mk__report__desc.md#ga3696f0782268d504b0c8bb540236779f)
- HID\_OUTPUT : [hid.h](group__usb__hid__items.md#ga6ef7aa576bf69f9ba5f93df500a1403c)
- HID\_PROTOCOL\_BOOT : [hid.h](group__usb__hid__definitions.md#gafd24e87747c82293e689f58157f06128)
- hid\_protocol\_cb\_t : [usb\_hid.h](group__usb__hid__device__api.md#gae3d308c55f5594cc0c926b52aaa28fc7)
- HID\_PROTOCOL\_REPORT : [hid.h](group__usb__hid__definitions.md#ga982c0da911cbda6e09bd48a5e4ab85f1)
- HID\_REPORT\_COUNT : [hid.h](group__usb__hid__items.md#ga71192f2a55f05456b893069ebfbc5b98)
- HID\_REPORT\_ID : [hid.h](group__usb__hid__items.md#ga1b45fce2c7df2847b1326fca29cef389)
- HID\_REPORT\_SIZE : [hid.h](group__usb__hid__items.md#ga3135a21a63c491daf8647fa771def0e7)
- HID\_REPORT\_TYPE\_FEATURE : [usbd\_hid.h](group__usbd__hid__device.md#ggabfdd923d3dea1fc17d6c21f4ad7dab1dadb047f4ed99575941ca9d857244f5aea)
- HID\_REPORT\_TYPE\_INPUT : [usbd\_hid.h](group__usbd__hid__device.md#ggabfdd923d3dea1fc17d6c21f4ad7dab1da451c0c5bb29aa79f5ce554ac9a914acd)
- HID\_REPORT\_TYPE\_OUTPUT : [usbd\_hid.h](group__usbd__hid__device.md#ggabfdd923d3dea1fc17d6c21f4ad7dab1dac019f1ccb72d64b8ce9dc5c5d952f8a3)
- HID\_USAGE : [hid.h](group__usb__hid__items.md#gac8429a70866a898887ead55664e04bd7)
- HID\_USAGE\_GEN\_BUTTON : [hid.h](group__usb__hid__definitions.md#ga13401731a0ead5448a0823d0f6142404)
- HID\_USAGE\_GEN\_DESKTOP : [hid.h](group__usb__hid__definitions.md#gacb3fc5b0f838dfa5eb95e9e1bf52b589)
- HID\_USAGE\_GEN\_DESKTOP\_GAMEPAD : [hid.h](group__usb__hid__definitions.md#ga17404e33133204a538f976d321c84ff0)
- HID\_USAGE\_GEN\_DESKTOP\_JOYSTICK : [hid.h](group__usb__hid__definitions.md#gada59a9f3aeaeaefc6112c7d9902b2d6d)
- HID\_USAGE\_GEN\_DESKTOP\_KEYBOARD : [hid.h](group__usb__hid__definitions.md#ga0bdaa3d23c79204a1064cb53b279bd77)
- HID\_USAGE\_GEN\_DESKTOP\_KEYPAD : [hid.h](group__usb__hid__definitions.md#ga69f8e44306828b3f44d3a7704ff07807)
- HID\_USAGE\_GEN\_DESKTOP\_MOUSE : [hid.h](group__usb__hid__definitions.md#ga983274dd50058de26e0e86d10d50e81a)
- HID\_USAGE\_GEN\_DESKTOP\_POINTER : [hid.h](group__usb__hid__definitions.md#ga77a7162980a77efa1e2e7b21942bb7dd)
- HID\_USAGE\_GEN\_DESKTOP\_UNDEFINED : [hid.h](group__usb__hid__definitions.md#ga1441517d7c57529dcf726a1dd8b09a07)
- HID\_USAGE\_GEN\_DESKTOP\_WHEEL : [hid.h](group__usb__hid__definitions.md#gaa8c772d412ac1ac7a36739c52f04c0a9)
- HID\_USAGE\_GEN\_DESKTOP\_X : [hid.h](group__usb__hid__definitions.md#gae283a3558ba536e163140a3b6cdbb273)
- HID\_USAGE\_GEN\_DESKTOP\_Y : [hid.h](group__usb__hid__definitions.md#gad1ab1f8f9c8a4a80bfc8e3a327e3b2fb)
- HID\_USAGE\_GEN\_KEYBOARD : [hid.h](group__usb__hid__definitions.md#ga1fdbfffd0b343cec1480e9f0347efa5d)
- HID\_USAGE\_GEN\_LEDS : [hid.h](group__usb__hid__definitions.md#gae632e9a37203506c051c3cacfdf0c2c7)
- HID\_USAGE\_MAX16 : [hid.h](group__usb__hid__items.md#gadd11a09546bc275c82e7a992cb9441cc)
- HID\_USAGE\_MAX8 : [hid.h](group__usb__hid__items.md#gae7fc9684ef10f50d69df6f495cc09e91)
- HID\_USAGE\_MIN16 : [hid.h](group__usb__hid__items.md#ga0dbc847d11cf64676f7cfc51b54150fa)
- HID\_USAGE\_MIN8 : [hid.h](group__usb__hid__items.md#gabf53f1e2eae6d686aeb7d62cc46b22ad)
- HID\_USAGE\_PAGE : [hid.h](group__usb__hid__items.md#ga30dc3f62583822ba27edd984dc2dec39)
- hids\_2525020210002\_heater\_Off : [wsen\_hids\_2525020210002.h](wsen__hids__2525020210002_8h.md#a043e3bd14c15c3a9a2bacc1e78f7f317aea95bf7ef0fa2430b6aad668b6b244d7)
- hids\_2525020210002\_heater\_On\_110mW\_100ms : [wsen\_hids\_2525020210002.h](wsen__hids__2525020210002_8h.md#a043e3bd14c15c3a9a2bacc1e78f7f317a38b108fbe099aaaf48f7a11e81b119bc)
- hids\_2525020210002\_heater\_On\_110mW\_1s : [wsen\_hids\_2525020210002.h](wsen__hids__2525020210002_8h.md#a043e3bd14c15c3a9a2bacc1e78f7f317aa0e704349b9568e5fd4bbd60156c64be)
- hids\_2525020210002\_heater\_On\_200mW\_100ms : [wsen\_hids\_2525020210002.h](wsen__hids__2525020210002_8h.md#a043e3bd14c15c3a9a2bacc1e78f7f317a030f5cad08959fdc084ba943ac392a48)
- hids\_2525020210002\_heater\_On\_200mW\_1s : [wsen\_hids\_2525020210002.h](wsen__hids__2525020210002_8h.md#a043e3bd14c15c3a9a2bacc1e78f7f317a15b9a389d72e7d338d7e8cf8c171ff35)
- hids\_2525020210002\_heater\_On\_20mW\_100ms : [wsen\_hids\_2525020210002.h](wsen__hids__2525020210002_8h.md#a043e3bd14c15c3a9a2bacc1e78f7f317a2500b161f1b08b26f68b2f9e5ac6098d)
- hids\_2525020210002\_heater\_On\_20mW\_1s : [wsen\_hids\_2525020210002.h](wsen__hids__2525020210002_8h.md#a043e3bd14c15c3a9a2bacc1e78f7f317aa713ff24dde4522352ac7bf636b7d7c3)
- hids\_2525020210002\_heater\_t : [wsen\_hids\_2525020210002.h](wsen__hids__2525020210002_8h.md#a043e3bd14c15c3a9a2bacc1e78f7f317)
- hids\_2525020210002\_precision\_High : [wsen\_hids\_2525020210002.h](wsen__hids__2525020210002_8h.md#a5cbc99af974e11d6a0095139c9d53745ae3ba827aa8733b0e376f9e61967d5df7)
- hids\_2525020210002\_precision\_Low : [wsen\_hids\_2525020210002.h](wsen__hids__2525020210002_8h.md#a5cbc99af974e11d6a0095139c9d53745a34a2ff586fb0eb69e5dca23672f8c214)
- hids\_2525020210002\_precision\_Medium : [wsen\_hids\_2525020210002.h](wsen__hids__2525020210002_8h.md#a5cbc99af974e11d6a0095139c9d53745aa5c2cf7ca07538112d21a9cb7872e524)
- hids\_2525020210002\_precision\_t : [wsen\_hids\_2525020210002.h](wsen__hids__2525020210002_8h.md#a5cbc99af974e11d6a0095139c9d53745)
- HIGH\_SPEED\_BUS\_SPEED : [sd\_spec.h](sd__spec_8h.md#a6b42b86d8f2ba4f29787c7c6f3d97f36a5593992de690adb1022b7926d1508ab3)
- high\_timer\_overflow() : [timestamp.h](timestamp_8h.md#a54d527f8fde477822ad2044579a7edd3)
- HISTORY\_DROPPED : [fff.h](fff_8h.md#adcf92825fec9b9478398765cb84cd00f)
- HIVECS : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#a5c62a691b1161751afa302c0aa64f85d)
- HL7800\_EMERGENCY : [hl7800.h](hl7800_8h.md#a65c8ed3a7c2a2aee39ca65e57f33b773a04cac2efa21c949edeefc105effa4a39)
- HL7800\_EVENT\_ACTIVE\_BANDS : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9aad01f254032296551f621c888530e9d1)
- HL7800\_EVENT\_APN\_UPDATE : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9a4cf6f0344fa2348f378756e77d5f2804)
- HL7800\_EVENT\_BANDS : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9a327cd78d882a1a36716236f2cdf28c31)
- HL7800\_EVENT\_FOTA\_COUNT : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9a3848abb978d465bd0a831fc0b66a33c3)
- HL7800\_EVENT\_FOTA\_STATE : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9aedd9ae54dfa7a007c18e2a345d0cb0c5)
- HL7800\_EVENT\_GPS : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9af3410e6ff2caa844c3b6f9963df485d1)
- HL7800\_EVENT\_GPS\_POSITION\_STATUS : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9a0b9e7d1fcb8f043c5ac0b242e4c6c772)
- HL7800\_EVENT\_NETWORK\_STATE\_CHANGE : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9a08a58f10e3d58022ac945b2e68d4145a)
- HL7800\_EVENT\_POLTE : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9a1fb1cd6b652c52ebf12e9741649f8630)
- HL7800\_EVENT\_POLTE\_LOCATE\_STATUS : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9a7ee246b282ac147aafa45969060c5280)
- HL7800\_EVENT\_POLTE\_REGISTRATION : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9aead019c4cd55d1f54fb16ddef7f8277c)
- HL7800\_EVENT\_RAT : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9ac22e246ac6bc5794ae0772bf3dbf5086)
- HL7800\_EVENT\_RESERVED : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9a7147e1d7ea1df5eb7604c3246a94ec0a)
- HL7800\_EVENT\_REVISION : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9a8a3b921d5bdb205f44576852467c38e2)
- HL7800\_EVENT\_RSSI : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9abb822dfaec7e96462be791857f9b3fba)
- HL7800\_EVENT\_SINR : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9ac76f3fec60d1ffeca58405cf38bd50fe)
- HL7800\_EVENT\_SITE\_SURVEY : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9a37463d52131771a296fb141c797b3e14)
- HL7800\_EVENT\_SLEEP\_STATE\_CHANGE : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9a7bd6e3e3c19ed2c5ac138c16e03b2562)
- HL7800\_EVENT\_STARTUP\_STATE\_CHANGE : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9a0d25a89cd39d581c82ae73fe0a85ba21)
- HL7800\_EVENT\_STATE : [hl7800.h](hl7800_8h.md#a3f7b0647d9ff01328e5536478a73aaf9a9189ebbdcf3175881a0e55ac9867acbf)
- HL7800\_FOTA\_COMPLETE : [hl7800.h](hl7800_8h.md#a8ed2ea65436083a9b1a49bb1f64574f3abd185b07f408b4b7ecb292f31aa6d19a)
- HL7800\_FOTA\_FILE\_ERROR : [hl7800.h](hl7800_8h.md#a8ed2ea65436083a9b1a49bb1f64574f3aaf2423203fdb79510efa9550e2a09bf9)
- HL7800\_FOTA\_IDLE : [hl7800.h](hl7800_8h.md#a8ed2ea65436083a9b1a49bb1f64574f3ab7d67051e56e05be47da306377bb8801)
- HL7800\_FOTA\_INSTALL : [hl7800.h](hl7800_8h.md#a8ed2ea65436083a9b1a49bb1f64574f3a6761ef6c52c40786c8b595950499851e)
- HL7800\_FOTA\_PAD : [hl7800.h](hl7800_8h.md#a8ed2ea65436083a9b1a49bb1f64574f3a481fdc3814098383af7b593d4f61ea7b)
- HL7800\_FOTA\_REBOOT\_AND\_RECONFIGURE : [hl7800.h](hl7800_8h.md#a8ed2ea65436083a9b1a49bb1f64574f3a5e517d07a386297b5d80110cabc1864b)
- HL7800\_FOTA\_SEND\_EOT : [hl7800.h](hl7800_8h.md#a8ed2ea65436083a9b1a49bb1f64574f3aa78ef13656312bb81aa957a515b337d7)
- HL7800\_FOTA\_START : [hl7800.h](hl7800_8h.md#a8ed2ea65436083a9b1a49bb1f64574f3ae6b160137651a7375551760f938b9da8)
- HL7800\_FOTA\_WIP : [hl7800.h](hl7800_8h.md#a8ed2ea65436083a9b1a49bb1f64574f3a722b66bd586cc4375253341f1df8d189)
- HL7800\_FUNCTIONALITY\_AIRPLANE : [hl7800.h](hl7800_8h.md#af999018ef3ca438a9d3cb7b6611300d2a2aca52c7dc8ade5db478f8eaebc4bc33)
- HL7800\_FUNCTIONALITY\_FULL : [hl7800.h](hl7800_8h.md#af999018ef3ca438a9d3cb7b6611300d2ad1e22b662121c8c71b9d34810958b6c2)
- HL7800\_FUNCTIONALITY\_MINIMUM : [hl7800.h](hl7800_8h.md#af999018ef3ca438a9d3cb7b6611300d2ae2c5fac661bdf514debc98b3e248cea4)
- HL7800\_GNSS\_EVENT\_INIT : [hl7800.h](hl7800_8h.md#a5b6a53d0353ae153f715163ca4e6043ba3b0b73d5b585d4ed44e00504be60c8ef)
- HL7800\_GNSS\_EVENT\_INVALID : [hl7800.h](hl7800_8h.md#a5b6a53d0353ae153f715163ca4e6043ba3349e6599deabd375c68bb3688bd9bfd)
- HL7800\_GNSS\_EVENT\_POSITION : [hl7800.h](hl7800_8h.md#a5b6a53d0353ae153f715163ca4e6043ba2df7e19144b20afb4bf3566804729db1)
- HL7800\_GNSS\_EVENT\_START : [hl7800.h](hl7800_8h.md#a5b6a53d0353ae153f715163ca4e6043ba689418f8d35440fe71507ee871f20de1)
- HL7800\_GNSS\_EVENT\_STOP : [hl7800.h](hl7800_8h.md#a5b6a53d0353ae153f715163ca4e6043bae83741a25baa0ffc3837b0653b01c318)
- HL7800\_GNSS\_POSITION\_EVENT\_2D\_AVAILABLE : [hl7800.h](hl7800_8h.md#aec06e58e1c79e23577d424806b6e696ba1cf9c2fe042ab784450451f36b83818d)
- HL7800\_GNSS\_POSITION\_EVENT\_3D\_AVAILABLE : [hl7800.h](hl7800_8h.md#aec06e58e1c79e23577d424806b6e696ba6bd45fa147597e9c278ec0f27c42efc7)
- HL7800\_GNSS\_POSITION\_EVENT\_FIXED\_TO\_INVALID : [hl7800.h](hl7800_8h.md#aec06e58e1c79e23577d424806b6e696ba9822e7c1f4a238658592a539d18d0c6d)
- HL7800\_GNSS\_POSITION\_EVENT\_INVALID : [hl7800.h](hl7800_8h.md#aec06e58e1c79e23577d424806b6e696babf5377809190c648e6f3624b4b0b82ee)
- HL7800\_GNSS\_POSITION\_EVENT\_LOST\_OR\_NOT\_AVAILABLE\_YET : [hl7800.h](hl7800_8h.md#aec06e58e1c79e23577d424806b6e696bac41b513dd45d2d038b9d7a4a9bae8fe3)
- HL7800\_GNSS\_POSITION\_EVENT\_PREDICTION\_AVAILABLE : [hl7800.h](hl7800_8h.md#aec06e58e1c79e23577d424806b6e696bad41adce29331d1917c97e94b6409a9b5)
- HL7800\_GNSS\_STATUS\_FAILURE : [hl7800.h](hl7800_8h.md#a5253bceab7f3da57f9a2d3918ee72625a830898a215c51c8a17aab3fb175083b3)
- HL7800\_GNSS\_STATUS\_INVALID : [hl7800.h](hl7800_8h.md#a5253bceab7f3da57f9a2d3918ee72625aadc2b5c2e8b257e8b12ae7c4f5f35d76)
- HL7800\_GNSS\_STATUS\_SUCCESS : [hl7800.h](hl7800_8h.md#a5253bceab7f3da57f9a2d3918ee72625ab989ec2e119be4f23a37cac5203225ab)
- HL7800\_GPS\_STR\_ALT\_UNC : [hl7800.h](hl7800_8h.md#a45fd97039bb3add8ddb09f803ce9b038a39502c1243b0df6765d6025e8173f214)
- HL7800\_GPS\_STR\_ALTITUDE : [hl7800.h](hl7800_8h.md#a45fd97039bb3add8ddb09f803ce9b038a1eac295eb05a3c4617d35c9fd29aebf6)
- HL7800\_GPS\_STR\_DIRECTION : [hl7800.h](hl7800_8h.md#a45fd97039bb3add8ddb09f803ce9b038af5bef33ea67240657038a288f600ec25)
- HL7800\_GPS\_STR\_FIX\_TYPE : [hl7800.h](hl7800_8h.md#a45fd97039bb3add8ddb09f803ce9b038a7cd77b6bf81380fdaba8cdad863a60be)
- HL7800\_GPS\_STR\_GPS\_TIME : [hl7800.h](hl7800_8h.md#a45fd97039bb3add8ddb09f803ce9b038a17989267e59a5169abb7f4d4c8bb3694)
- HL7800\_GPS\_STR\_HEPE : [hl7800.h](hl7800_8h.md#a45fd97039bb3add8ddb09f803ce9b038aca3dac785dc09cc6d0780c2ce1956de4)
- HL7800\_GPS\_STR\_HOR\_SPEED : [hl7800.h](hl7800_8h.md#a45fd97039bb3add8ddb09f803ce9b038ac7f6f8e1d00b25b551a1560b7d998fc8)
- HL7800\_GPS\_STR\_LATITUDE : [hl7800.h](hl7800_8h.md#a45fd97039bb3add8ddb09f803ce9b038a5faac685b9958871cc3feb990e593b8b)
- HL7800\_GPS\_STR\_LONGITUDE : [hl7800.h](hl7800_8h.md#a45fd97039bb3add8ddb09f803ce9b038a56f4e3a1a3b2eaacb2c34ec486165de8)
- HL7800\_GPS\_STR\_VER\_SPEED : [hl7800.h](hl7800_8h.md#a45fd97039bb3add8ddb09f803ce9b038a40e32118c8039cfd3c6ef72c8a4d7f85)
- HL7800\_HOME\_NETWORK : [hl7800.h](hl7800_8h.md#a65c8ed3a7c2a2aee39ca65e57f33b773a7e5bdc7f85c2d2f6ec62beee156e887d)
- HL7800\_NOT\_REGISTERED : [hl7800.h](hl7800_8h.md#a65c8ed3a7c2a2aee39ca65e57f33b773a94fe4bdd729ba6df15d9e9aa53998599)
- HL7800\_OUT\_OF\_COVERAGE : [hl7800.h](hl7800_8h.md#a65c8ed3a7c2a2aee39ca65e57f33b773ae3f6d693bbe0d0c09a41a0e013fe5a82)
- HL7800\_REGISTRATION\_DENIED : [hl7800.h](hl7800_8h.md#a65c8ed3a7c2a2aee39ca65e57f33b773a4eeb75667b400acaff56ad282bfe6a7c)
- HL7800\_ROAMING : [hl7800.h](hl7800_8h.md#a65c8ed3a7c2a2aee39ca65e57f33b773a9d7e014131f399f000965803ccb5e889)
- HL7800\_SEARCHING : [hl7800.h](hl7800_8h.md#a65c8ed3a7c2a2aee39ca65e57f33b773a1ad9a81e5ce65dc6eee98a87f880f86a)
- HL7800\_SLEEP\_AWAKE : [hl7800.h](hl7800_8h.md#a3396149e553c32a597739096efe2aff7ac7bf9c4685d31858b98d4188747387ba)
- HL7800\_SLEEP\_HIBERNATE : [hl7800.h](hl7800_8h.md#a3396149e553c32a597739096efe2aff7af1253aa2135a3c1fb0f3a47a1f0265a4)
- HL7800\_SLEEP\_LITE\_HIBERNATE : [hl7800.h](hl7800_8h.md#a3396149e553c32a597739096efe2aff7a58c8b0b7a63a3f85b14d0cd0eea4b452)
- HL7800\_SLEEP\_SLEEP : [hl7800.h](hl7800_8h.md#a3396149e553c32a597739096efe2aff7a37e4283b77e32e890f7cc3eca3985289)
- HL7800\_SLEEP\_UNINITIALIZED : [hl7800.h](hl7800_8h.md#a3396149e553c32a597739096efe2aff7af81cd0793c7faded881246c6a44b099a)
- HL7800\_STARTUP\_STATE\_INACTIVE\_SIM : [hl7800.h](hl7800_8h.md#aefcf9c39983d8f3f58bcd1a24ca04e99a9999f1a90165d5996a7a2ff415db53d6)
- HL7800\_STARTUP\_STATE\_READY : [hl7800.h](hl7800_8h.md#aefcf9c39983d8f3f58bcd1a24ca04e99aac2ef169e3273dd11331acae3abb9c6e)
- HL7800\_STARTUP\_STATE\_SIM\_NOT\_PRESENT : [hl7800.h](hl7800_8h.md#aefcf9c39983d8f3f58bcd1a24ca04e99a92593373e0efcb87471c6d0325f1c2e6)
- HL7800\_STARTUP\_STATE\_SIMLOCK : [hl7800.h](hl7800_8h.md#aefcf9c39983d8f3f58bcd1a24ca04e99a098e678b80c7148972d572f6dac763d6)
- HL7800\_STARTUP\_STATE\_UNKNOWN : [hl7800.h](hl7800_8h.md#aefcf9c39983d8f3f58bcd1a24ca04e99a9d2a5fd088822989fc109cb3add31393)
- HL7800\_STARTUP\_STATE\_UNRECOVERABLE\_ERROR : [hl7800.h](hl7800_8h.md#aefcf9c39983d8f3f58bcd1a24ca04e99a1b88f9edf57f6fe1b9f4b31ecb196632)
- HL7800\_STARTUP\_STATE\_WAITING\_FOR\_ACCESS\_CODE : [hl7800.h](hl7800_8h.md#aefcf9c39983d8f3f58bcd1a24ca04e99a60dd736ae85eeafaefce839b623c530f)
- HL7800\_STATE\_INITIALIZED : [hl7800.h](hl7800_8h.md#a4b00cc03cc14b3812bed4a57aeea822ca44858cd6e73be2697e39f60aa54565be)
- HL7800\_STATE\_NOT\_READY : [hl7800.h](hl7800_8h.md#a4b00cc03cc14b3812bed4a57aeea822caccfc2361ab2bea50b510c428786a9a07)
- HL7800\_UNABLE\_TO\_CONFIGURE : [hl7800.h](hl7800_8h.md#a65c8ed3a7c2a2aee39ca65e57f33b773a2502129bf7729cce4b1b96ac66dfdd86)
- HOST\_KBC\_EVT\_IBF : [espi.h](group__espi__interface.md#gaa0807c908666cdcbb3a85f310bfbfccc)
- HOST\_KBC\_EVT\_OBE : [espi.h](group__espi__interface.md#ga807bb75027f24e040cd28eba4bc1002c)
- HOST\_NAME\_MAX : [posix\_features.h](posix__features_8h.md#ac956117a90023ec0971b8f9fce9dec75)
- HOST\_TO\_DEVICE : [pcie\_ep.h](pcie__ep_8h.md#acd2605f2fb5676ded5f125712681d458af2c2a8166d85d21e036a4a2015df803e)
- HOST\_TO\_MEMORY : [dma.h](group__dma__interface.md#ggae442d8ba73be7e53b68165647b0ea402a7e2b4150c28b057598975e95e8b7494c)
- HOUR\_PER\_DAY : [sys\_clock.h](group__clock__apis.md#gafcbf34dc5c48a91fe5f6efe4c1bae745)
- HP\_APM\_M0\_INTR\_SOURCE : [esp-esp32c6-intmux.h](esp-esp32c6-intmux_8h.md#aa38b79495b31783ef39d627c88ac158b)
- HP\_APM\_M1\_INTR\_SOURCE : [esp-esp32c6-intmux.h](esp-esp32c6-intmux_8h.md#a0e5f1e66fb5502c426c42de7248f026f)
- HP\_APM\_M2\_INTR\_SOURCE : [esp-esp32c6-intmux.h](esp-esp32c6-intmux_8h.md#a4ef1ca8c6b71640fdf5ca7c7eed845c5)
- HP\_APM\_M3\_INTR\_SOURCE : [esp-esp32c6-intmux.h](esp-esp32c6-intmux_8h.md#a04a62fcb5b5ea0c0ab7029c5440a7a61)
- HP\_PERI\_TIMEOUT\_INTR\_SOURCE : [esp-esp32c6-intmux.h](esp-esp32c6-intmux_8h.md#a6c7756a44b101b5075aedac9baf733b9)
- HPE\_CB\_body : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a5dc4b0888f48cd87fc3ded374ffac8a2)
- HPE\_CB\_chunk\_complete : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a008e232118d6133c4dbdd9770d926694)
- HPE\_CB\_chunk\_header : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a69ccadce5be8074b104b19aa74dce556)
- HPE\_CB\_header\_field : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64ade6f685cd47ad03c836aeee97efff1ed)
- HPE\_CB\_header\_value : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64aceed4040be7acf32b6bceb3aace8405e)
- HPE\_CB\_headers\_complete : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a5d82bb467f93eed296d892408c44816a)
- HPE\_CB\_message\_begin : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a5b44995fcd173cf38a88fc3ceaf0cb41)
- HPE\_CB\_message\_complete : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64ae0f56ef0ecc6638fb0594d130a1ee490)
- HPE\_CB\_status : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a9adad03852eddb1f361abe9d856a1a0f)
- HPE\_CB\_url : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64ae15b73f73f8aad8c5e39d03b29414f9b)
- HPE\_CLOSED\_CONNECTION : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a7fbc6a25f20237b1cc795db489312e8e)
- HPE\_HEADER\_OVERFLOW : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a5270cdc2f8af1802ccf3a2f33fde9307)
- HPE\_INVALID\_CHUNK\_SIZE : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a36842cc306c491da8c42023be68585e9)
- HPE\_INVALID\_CONSTANT : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a1b9ec4aeef6f168f9d711c27a0c6faa8)
- HPE\_INVALID\_CONTENT\_LENGTH : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a18b873c41a1d7aa9ee9486f719aa7509)
- HPE\_INVALID\_CONTENT\_RANGE : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64ab725a62450a5246e98fb5deeb0a250b5)
- HPE\_INVALID\_EOF\_STATE : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a4103809c185fee62b11c188ff0eab39a)
- HPE\_INVALID\_FRAGMENT : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64afa80e3a0c0dd1c93cf0a11cacbd59079)
- HPE\_INVALID\_HEADER\_TOKEN : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64ac0348f1ca04bf4d882affcd0249336b5)
- HPE\_INVALID\_HOST : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a6391e880280eda55707145bda1170294)
- HPE\_INVALID\_INTERNAL\_STATE : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64abb98b653c0972e3e22bc5ff8b57d0d55)
- HPE\_INVALID\_METHOD : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64ac031cfd48285e22ddec18964f6281f6e)
- HPE\_INVALID\_PATH : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a69e17a8b5a35b9f93ea914224c2d4f2a)
- HPE\_INVALID\_PORT : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a3e7c3b8a95f34bbd40ea047fcd43ffa5)
- HPE\_INVALID\_QUERY\_STRING : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a383ef24f0ac59de1c128ca776d813865)
- HPE\_INVALID\_STATUS : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64aa4a2007f1dc03bf22aff5ca8885f6b59)
- HPE\_INVALID\_URL : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64ad92573bf62e7b0a13d398926a984fa9d)
- HPE\_INVALID\_VERSION : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a5a1b7ae13c36ef37fd52b2b68112b501)
- HPE\_LF\_EXPECTED : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64af9f23325bd502239af0326a0b407b41d)
- HPE\_OK : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64adf532f653497f3085108a5e1f097aa8e)
- HPE\_PAUSED : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64aed64f2a65634183e8f708ac80af3f6f2)
- HPE\_STRICT : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a7f92de0f01b2d0e37209854069183f16)
- HPE\_UNEXPECTED\_CONTENT\_LENGTH : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a2406df24d500b1228fc5ef4a8d60e7c3)
- HPE\_UNEXPECTED\_CONTENT\_RANGE : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64af880c7a160717f01bba7bb98169c5011)
- HPE\_UNKNOWN : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64a36cb81d8c40b00602b558f82a38eaecc)
- hs\_max\_data\_rate : [sd\_spec.h](sd__spec_8h.md#a2093143614e52f69e173289391d7e91c)
- HS\_MAX\_DTR : [sd\_spec.h](sd__spec_8h.md#a2093143614e52f69e173289391d7e91ca10f805e3f66366474428718cb4569da0)
- HS\_UNSUPPORTED : [sd\_spec.h](sd__spec_8h.md#a2093143614e52f69e173289391d7e91cac3e8d67442f59c35b57d19d81b5d0d66)
- HSCTLR\_RES1 : [cpu.h](arm_2cortex__a__r_2cpu_8h.md#a419c15bf37a7aaea28a4bea82b8c4421)
- HSI48\_SEL : [stm32l0\_clock.h](stm32l0__clock_8h.md#a3e4eee46bbec297ebd6da48abdff1dbb)
- HSIOM\_SEL\_ACT\_0 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a3080ad4afafa572482ea1a5b49f6a1ce)
- HSIOM\_SEL\_ACT\_1 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a990e35fecfcc37ca08fe709eee746618)
- HSIOM\_SEL\_ACT\_10 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a42c5af47fba8b69dacb3064e332193fd)
- HSIOM\_SEL\_ACT\_11 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a48052c8dd78b1403de4d675571b7e6e2)
- HSIOM\_SEL\_ACT\_12 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a6fc1302224b4d7585c25c3dc2ea340e7)
- HSIOM\_SEL\_ACT\_13 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#ae4fb8f65206098cace15b3e0f1c12a3e)
- HSIOM\_SEL\_ACT\_14 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a7c3ffb4e79372b4cc4d1a7b4554911d5)
- HSIOM\_SEL\_ACT\_15 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#ab3285eea99f44cbe985eb097d1166a3d)
- HSIOM\_SEL\_ACT\_2 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a696aeb76109bf339ebf0fcd20979f211)
- HSIOM\_SEL\_ACT\_3 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a25e956bc540c9570392a1722b7e94670)
- HSIOM\_SEL\_ACT\_4 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a3336f2e2d4886e0e46819ee4f4d96734)
- HSIOM\_SEL\_ACT\_5 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a1040ff80864b6a1d85eb4c07f4278ea1)
- HSIOM\_SEL\_ACT\_6 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a575188296b25564faa9b3a3b4817b5e4)
- HSIOM\_SEL\_ACT\_7 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#ae9c0f6360d56214106b09861eedb911a)
- HSIOM\_SEL\_ACT\_8 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a8d36acbee0c4de7088ddc08a8b1c07a6)
- HSIOM\_SEL\_ACT\_9 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#aff276e6f5cdc671648a428c22fc2776e)
- HSIOM\_SEL\_AMUXA : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a8806729fcb666c9de823be5dd55c873d)
- HSIOM\_SEL\_AMUXA\_DSI : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a4ba8695f92c0f347dd25ef981d67d1b0)
- HSIOM\_SEL\_AMUXB : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a862eb93443c5c9575ff990b776b6203b)
- HSIOM\_SEL\_AMUXB\_DSI : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#af7a28a087a8867a14423e9ab471cce54)
- HSIOM\_SEL\_DS\_0 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#afb33417be16e7fa6423fadd2ef4a0f5b)
- HSIOM\_SEL\_DS\_1 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#aa06be65ae17fc2dc1861c2af2e364652)
- HSIOM\_SEL\_DS\_2 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a07f591dc1f8a9f9eda13063d8c58c4eb)
- HSIOM\_SEL\_DS\_3 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a157da2f7e72fa8f19dfd682ec4444319)
- HSIOM\_SEL\_DS\_4 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a0f134c65358e450ca55341bbfec1cd0e)
- HSIOM\_SEL\_DS\_5 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a4208fc8f94abf237d943bc5e8ffe3080)
- HSIOM\_SEL\_DS\_6 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#ac0153eaa52ef010bf58304a44ecb1e9b)
- HSIOM\_SEL\_DS\_7 : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a8c067c1737f0f1573e056a384954fd81)
- HSIOM\_SEL\_DSI\_DSI : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a959873e5156c6e3c24dd2773bb1ba516)
- HSIOM\_SEL\_DSI\_GPIO : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a022f7af586ee9b46f689d187e8dd73d8)
- HSIOM\_SEL\_GPIO : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#ac0d2af1bfb229de155412af7f00e4fe0)
- HSIOM\_SEL\_GPIO\_DSI : [ifx\_cat1-pinctrl.h](ifx__cat1-pinctrl_8h.md#a441de7f56a1c7c75cdae4d9f93ccfade)
- HSPI\_SEL : [stm32u5\_clock.h](stm32u5__clock_8h.md#aca5233e2f676feba6b622f0068047437)
- htonl : [net\_ip.h](group__ip__4__6.md#gae4027a6ad07f13aa12eab285a1b46019)
- htonll : [net\_ip.h](group__ip__4__6.md#ga9f4bf0773c45ad9a9753a1b784a13fbb)
- htons : [net\_ip.h](group__ip__4__6.md#ga51799f5ebb4c7228ef7e95c247030f42)
- HTTP2\_CONTINUATION\_FRAME : [frame.h](frame_8h.md#a3017b7bf771b2502f76e1d8bb672bb2fa2baf23cf1cb79f34306edb76f768e822)
- HTTP2\_DATA\_FRAME : [frame.h](frame_8h.md#a3017b7bf771b2502f76e1d8bb672bb2fa02d444bc7da5f9342c8490051494a561)
- http2\_frame\_type : [frame.h](frame_8h.md#a3017b7bf771b2502f76e1d8bb672bb2f)
- HTTP2\_GOAWAY\_FRAME : [frame.h](frame_8h.md#a3017b7bf771b2502f76e1d8bb672bb2fa9439fea062e3e2d61d8bfadd66e421c8)
- HTTP2\_HEADERS\_FRAME : [frame.h](frame_8h.md#a3017b7bf771b2502f76e1d8bb672bb2fabb919f746f9cb550e3d3ed3fbd0aa0fb)
- HTTP2\_PING\_FRAME : [frame.h](frame_8h.md#a3017b7bf771b2502f76e1d8bb672bb2fa12949c06e095e808f65bd4fb3cfa69ff)
- HTTP2\_PRIORITY\_FRAME : [frame.h](frame_8h.md#a3017b7bf771b2502f76e1d8bb672bb2fab09f251d80dd5475808473a190349d15)
- HTTP2\_PUSH\_PROMISE\_FRAME : [frame.h](frame_8h.md#a3017b7bf771b2502f76e1d8bb672bb2fad82d652aee8fd35ce6e2ca0eec717442)
- HTTP2\_RST\_STREAM\_FRAME : [frame.h](frame_8h.md#a3017b7bf771b2502f76e1d8bb672bb2faea35662abfea3d425ca626be3a042e49)
- http2\_settings : [frame.h](frame_8h.md#ac0e63ce922141d8043318ed40da4b559)
- HTTP2\_SETTINGS\_ENABLE\_PUSH : [frame.h](frame_8h.md#ac0e63ce922141d8043318ed40da4b559ad1c9118f459a93bce47b0ad1546b50b4)
- HTTP2\_SETTINGS\_FRAME : [frame.h](frame_8h.md#a3017b7bf771b2502f76e1d8bb672bb2fa87d56ac6afcb9d85c8774b190b4f9123)
- HTTP2\_SETTINGS\_HEADER\_TABLE\_SIZE : [frame.h](frame_8h.md#ac0e63ce922141d8043318ed40da4b559a0dcdd60d4c429d558c4cebc9c1527e06)
- HTTP2\_SETTINGS\_INITIAL\_WINDOW\_SIZE : [frame.h](frame_8h.md#ac0e63ce922141d8043318ed40da4b559a1152ff63cb965c24f05419e92112d6f0)
- HTTP2\_SETTINGS\_MAX\_CONCURRENT\_STREAMS : [frame.h](frame_8h.md#ac0e63ce922141d8043318ed40da4b559a844c0af59b8b254301d47b0888886304)
- HTTP2\_SETTINGS\_MAX\_FRAME\_SIZE : [frame.h](frame_8h.md#ac0e63ce922141d8043318ed40da4b559af09a348b42a97e9d8ae57bff5e252a9e)
- HTTP2\_SETTINGS\_MAX\_HEADER\_LIST\_SIZE : [frame.h](frame_8h.md#ac0e63ce922141d8043318ed40da4b559a763095cc59fc3a905a4612e9a2843705)
- HTTP2\_WINDOW\_UPDATE\_FRAME : [frame.h](frame_8h.md#a3017b7bf771b2502f76e1d8bb672bb2fa619d7150ec1e5eff0f7b98a0a228b6b4)
- HTTP\_100\_CONTINUE : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dacd840de9c8d9601982b1e13f9d00e882)
- HTTP\_101\_SWITCHING\_PROTOCOLS : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da8663a5f332b7837c96599b127c2616d5)
- HTTP\_102\_PROCESSING : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da365b2bd5e2ea86fa9e95e219a11ae0af)
- HTTP\_103\_EARLY\_HINTS : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dab51c1485692490f10f115323192655f0)
- HTTP\_200\_OK : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da95005af4e6e4478af07e395d5b40fca9)
- HTTP\_201\_CREATED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da049723ca514a8a4383d37d341389671a)
- HTTP\_202\_ACCEPTED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da8876c5cb07aab2c49b60f8162c55c2a9)
- HTTP\_203\_NON\_AUTHORITATIVE\_INFORMATION : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da2a9336f89d5ec5a75ee507456bd126ce)
- HTTP\_204\_NO\_CONTENT : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da663e0e9bb7aabc67d94c9e21fd498b93)
- HTTP\_205\_RESET\_CONTENT : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8daebf6ddfe7266b27a8c1463b213274255)
- HTTP\_206\_PARTIAL\_CONTENT : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da8cf9268deed8f7326477cc9ca75c56b2)
- HTTP\_207\_MULTI\_STATUS : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da19dd55c06c6f613ab8c3d0cf62a60e7d)
- HTTP\_208\_ALREADY\_REPORTED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8daac56bbd7352cd0aa7482bf18f03dd47f)
- HTTP\_226\_IM\_USED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da92cbf60d86ad7cfc37dffea8fac8284b)
- HTTP\_300\_MULTIPLE\_CHOICES : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dabbcf6453c3f7487f405f6434decf4435)
- HTTP\_301\_MOVED\_PERMANENTLY : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8daa1233081760e3a200b40a803d90a838f)
- HTTP\_302\_FOUND : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dab6b1056e30f4f934f47a17cd5d9978dc)
- HTTP\_303\_SEE\_OTHER : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dace9856b68ab35f424af83d10ae41ec51)
- HTTP\_304\_NOT\_MODIFIED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da8b9f56ce4e7b089e925d1ed8dce37bf8)
- HTTP\_305\_USE\_PROXY : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da17cded8509d8f2d127c10755e96c45aa)
- HTTP\_306\_UNUSED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da90d6cc67e4d7c7af04bf01669bb9a981)
- HTTP\_307\_TEMPORARY\_REDIRECT : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da38136e534754d25b92dfeeec7822acf7)
- HTTP\_308\_PERMANENT\_REDIRECT : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da41a528c645fc6033b03c9e3586413416)
- HTTP\_400\_BAD\_REQUEST : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da573e52d342de96715fafca473db9e63c)
- HTTP\_401\_UNAUTHORIZED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8daec7448b9f31b792930fa812529fdb113)
- HTTP\_402\_PAYMENT\_REQUIRED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8daf3b35487d12f9c68cac8dfb18258fd3b)
- HTTP\_403\_FORBIDDEN : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da01a39dead7f1e06819788111cf091d00)
- HTTP\_404\_NOT\_FOUND : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8daa7daeb030bdc63080a76316ea49d7875)
- HTTP\_405\_METHOD\_NOT\_ALLOWED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da90c5df830e4a4870d159568ab467a163)
- HTTP\_406\_NOT\_ACCEPTABLE : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da12683b2ef168145ba3ea15fdcfa5a3d0)
- HTTP\_407\_PROXY\_AUTHENTICATION\_REQUIRED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dac8ab478cacfd4a65de54a89aa624d4e4)
- HTTP\_408\_REQUEST\_TIMEOUT : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da2dcdac23926991c19e356591f445cc01)
- HTTP\_409\_CONFLICT : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da1f9f47f3f238245eb929593d97b08c50)
- HTTP\_410\_GONE : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da7e1ed57551254aa0c1ac6bfc3379e444)
- HTTP\_411\_LENGTH\_REQUIRED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dadde89da537b429fc18b290eafba0bd93)
- HTTP\_412\_PRECONDITION\_FAILED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da41054511d912380bf3e8f8a5fc6481f5)
- HTTP\_413\_PAYLOAD\_TOO\_LARGE : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da24bbe6f0c14303e45f3bed4fd5abda35)
- HTTP\_414\_URI\_TOO\_LONG : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dadc6ba425c30238e9d77c250ee0666807)
- HTTP\_415\_UNSUPPORTED\_MEDIA\_TYPE : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dadc804c5b375895e6097567b092041abd)
- HTTP\_416\_RANGE\_NOT\_SATISFIABLE : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da64e4af58b6c32a5bc230d219ef169095)
- HTTP\_417\_EXPECTATION\_FAILED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dab672f6b0001fe4913b0bec2e1d894eae)
- HTTP\_418\_IM\_A\_TEAPOT : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da5e0e4a0d3b729bb824109850cc835762)
- HTTP\_421\_MISDIRECTED\_REQUEST : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da9c09b98973f0587bd40a8799d9b9327b)
- HTTP\_422\_UNPROCESSABLE\_ENTITY : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da64c040b238b1fafb97064e94e022e8b8)
- HTTP\_423\_LOCKED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da0b4980ea5622d3bb6ff4f3cbd35019d7)
- HTTP\_424\_FAILED\_DEPENDENCY : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da158e8935ffa9feeb34872894b2bbb9a3)
- HTTP\_425\_TOO\_EARLY : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dac36e0befced387ab34536b913bc5fdfc)
- HTTP\_426\_UPGRADE\_REQUIRED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da54937864193a60117b3292a648e32fb2)
- HTTP\_428\_PRECONDITION\_REQUIRED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dab90a0098eaf6d21537624059b281ad98)
- HTTP\_429\_TOO\_MANY\_REQUESTS : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da8cb955695255e2ae409a3ae758a4785e)
- HTTP\_431\_REQUEST\_HEADER\_FIELDS\_TOO\_LARGE : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da20dda0eafc4757992d73d82953074a14)
- HTTP\_451\_UNAVAILABLE\_FOR\_LEGAL\_REASONS : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8daf5c91a9d8a67f7dd9d794009f8afc8a1)
- HTTP\_500\_INTERNAL\_SERVER\_ERROR : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dade6299dbe0899702d3242f58c9a0f8e4)
- HTTP\_501\_NOT\_IMPLEMENTED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da6409f878aa7dc96869e51cefabe2f40b)
- HTTP\_502\_BAD\_GATEWAY : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da38eeaf7c0b4bdc5dbe179db6ea734375)
- HTTP\_503\_SERVICE\_UNAVAILABLE : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da8d7b1764f16f69d6631fcf971a5e3d5d)
- HTTP\_504\_GATEWAY\_TIMEOUT : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da82f00cb61b88603756ed74061f88ab71)
- HTTP\_505\_HTTP\_VERSION\_NOT\_SUPPORTED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8daa119343b9f0c57d39a587af025b63419)
- HTTP\_506\_VARIANT\_ALSO\_NEGOTIATES : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dab964d08c22b5a75583f9a999608b758e)
- HTTP\_507\_INSUFFICIENT\_STORAGE : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dac52b5659581516f9c38bab6d33b26b97)
- HTTP\_508\_LOOP\_DETECTED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da9805a426667162c3429dc1c77cc1ab45)
- HTTP\_510\_NOT\_EXTENDED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8da5296e8faf9e10e505d90a3c331cc1fbb)
- HTTP\_511\_NETWORK\_AUTHENTICATION\_REQUIRED : [status.h](group__http__status__codes.md#ggabc3b93f68c8bdd857ad32913628dfa8dad9b064b230d0a39e262f5f2358d9c20a)
- HTTP\_ACL : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8ab76b7cdc0a589106ab2be8e068ae9e8c)
- HTTP\_BIND : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a327dcf61f2241a23b809ffda50af1e9b)
- http\_body\_is\_final() : [parser.h](parser_8h.md#a5156a631a251516a6e78b17e1faadbb2)
- HTTP\_BOTH : [parser.h](parser_8h.md#af9d6d304f8c255158175951b434cfa7aadac18fbd072752213fd5308bb5fc8684)
- http\_cb : [parser.h](parser_8h.md#aa0f8424a6e7d3dd0b2f3b6358b57f1a1)
- HTTP\_CHECKOUT : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8abcc115ec0192f6a56fd7ca8564c9e30e)
- http\_client\_req() : [client.h](group__http__client.md#gaa38b6efb03f88d6959273a41b6acac81)
- HTTP\_CONNECT : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a73feb27a5ac46d923d5c636f797b3e76)
- HTTP\_COPY : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8adb9611ac2f3fbaa16b21eddc40791b7c)
- http\_data\_cb : [parser.h](parser_8h.md#a1aab76595c275d0615cbea1cee1807c8)
- HTTP\_DATA\_FINAL : [client.h](group__http__client.md#gga04fc31de51404e35b3dfab6261bb8e6da428633ff4a67c00c67fb5cbc23269d61)
- HTTP\_DATA\_MORE : [client.h](group__http__client.md#gga04fc31de51404e35b3dfab6261bb8e6da3f75fb095e40bfb4efd2c16059093359)
- http\_data\_status : [server.h](group__http__server.md#ga496accfe23add03417bdc98369d32ea8)
- HTTP\_DELETE : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a427575ab776ed70f0aa76667affc3942)
- http\_errno : [parser.h](parser_8h.md#a14687aec2341ce0e62db2e543dd1da64)
- http\_errno\_description() : [parser.h](parser_8h.md#a88adfab20d97366aac1fe05aa7dde7da)
- http\_errno\_name() : [parser.h](parser_8h.md#acce1b9056442d75d4d609e797bcce2fd)
- http\_final\_call : [client.h](group__http__client.md#ga04fc31de51404e35b3dfab6261bb8e6d)
- HTTP\_GET : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a4ad23c3d2f21f7502ba058ef89518166)
- HTTP\_HEAD : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8ab547cb50f6792b41c3e7d52ee0f8e442)
- http\_header\_cb\_t : [client.h](group__http__client.md#ga34a431c54c52b86618ca0e27ce3862b4)
- http\_header\_status : [server.h](group__http__server.md#ga6c15e872ece1b9a740b6dca3974101b3)
- HTTP\_HEADER\_STATUS\_DROPPED : [server.h](group__http__server.md#gga6c15e872ece1b9a740b6dca3974101b3a3f41dca87eecce1ac499389e72285621)
- HTTP\_HEADER\_STATUS\_NONE : [server.h](group__http__server.md#gga6c15e872ece1b9a740b6dca3974101b3ac01b170099c3ea7fafa5d22f164930ed)
- HTTP\_HEADER\_STATUS\_OK : [server.h](group__http__server.md#gga6c15e872ece1b9a740b6dca3974101b3ad4ad497a135cc5855573cc0211e7b7ec)
- HTTP\_LINK : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a86af7b9dfab558c6d7e77788b0bf9c29)
- HTTP\_LOCK : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8aa7119ecfb8aece4bbfb7a261331abddf)
- HTTP\_MAX\_HEADER\_SIZE : [parser.h](parser_8h.md#a6272a7f92e0f1b66e07680f32f6f21b6)
- HTTP\_MERGE : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a4851e8dca997a9b41099f2d8f14be069)
- http\_method : [method.h](group__http__methods.md#gaacd5f203e33ac338ca5cb8f02a3ff3b8)
- http\_method\_str() : [parser.h](parser_8h.md#abb207665b6ff41700e5bbb260b580cb6)
- HTTP\_MKACTIVITY : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a2bf319204b9298444ae66023a78ba9b4)
- HTTP\_MKCALENDAR : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a2cc45c2a2e2dcce009d34ac124a0c80f)
- HTTP\_MKCOL : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a850ffd3aeeb1d55b124aa6d1f990b3a6)
- HTTP\_MOVE : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8ad284635f2909fb5b9640928cb0e705c7)
- HTTP\_MSEARCH : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a20ba2a33b5833d9a16cca5a1ba9de8e3)
- HTTP\_NOTIFY : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a39f145838eada9b10c689e4a2b154ccf)
- HTTP\_OPTIONS : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a86aa5540a666a38528d28bd7591cb251)
- HTTP\_PARSER\_ERRNO : [parser.h](parser_8h.md#a356ebaa93536e6f94c2948a1416697c7)
- http\_parser\_execute() : [parser.h](parser_8h.md#a54f1346f15b326f6308a3ff7f0f75b52)
- http\_parser\_init() : [parser.h](parser_8h.md#ab8ae8e721c5c9f7309e94c174c72a940)
- http\_parser\_parse\_url() : [parser\_url.h](parser__url_8h.md#aeb269310a348fd68fd001b30b690fc83)
- http\_parser\_pause() : [parser.h](parser_8h.md#aa3764343ba4d2bb13fe39b05425633ba)
- http\_parser\_settings\_init() : [parser.h](parser_8h.md#a76d2e1f7225617f6941042fc95d888fe)
- http\_parser\_type : [parser.h](parser_8h.md#af9d6d304f8c255158175951b434cfa7a)
- http\_parser\_url\_fields : [parser\_url.h](parser__url_8h.md#a9ca1f91c2958091e2ac9e9b2f903d4eb)
- http\_parser\_url\_init() : [parser\_url.h](parser__url_8h.md#a64e907d36fbcc883033c6bbe5a78b1b3)
- http\_parser\_version() : [parser.h](parser_8h.md#a2559b4d373c7f0d85c77a2a3c308a5ee)
- HTTP\_PARSER\_VERSION\_MAJOR : [parser.h](parser_8h.md#abfeef6f3e39791acc311791feda09d27)
- HTTP\_PARSER\_VERSION\_MINOR : [parser.h](parser_8h.md#ab8479153443ca4fe95b3de5adb0224de)
- HTTP\_PARSER\_VERSION\_PATCH : [parser.h](parser_8h.md#afb999672cce2ebd7f952bd3f28d8f5e5)
- HTTP\_PATCH : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8ae1345469c9ff83a10676dd96e7acf0dc)
- http\_payload\_cb\_t : [client.h](group__http__client.md#gaf46ede77bdc83602c84b9342dd8d30ed)
- HTTP\_POST : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8aa763023b51da2b3618f24cbf994b34bf)
- HTTP\_PROPFIND : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a3d253975870f94c93f049575afaff83d)
- HTTP\_PROPPATCH : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a12eca1105638a830128e9dc989318f92)
- HTTP\_PURGE : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a36428da6d444779444f9944ee50ff2a5)
- HTTP\_PUT : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a2415577115dd0cd5d5a5aa62d52e1512)
- HTTP\_REBIND : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a9a8d347e6e7127432058b90466f6a2fd)
- HTTP\_REPORT : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a544d35cc7e95e6a0be97122ab744f2bd)
- HTTP\_REQUEST : [parser.h](parser_8h.md#af9d6d304f8c255158175951b434cfa7aa9f727b57e9e9c1651ee0df29aa1b1713)
- HTTP\_RESOURCE\_DEFINE : [service.h](group__http__service.md#gab177436ac7a8d6589dcfbd416ffd9200)
- http\_resource\_dynamic\_cb\_t : [server.h](group__http__server.md#ga5b74095aacd9d8f6e203ff53d908a99f)
- HTTP\_RESOURCE\_FOREACH : [service.h](group__http__service.md#ga450271e3a0a7098d5942539e1482605f)
- http\_resource\_type : [server.h](group__http__server.md#ga23d0077fb99827b25491111bd74d00af)
- HTTP\_RESOURCE\_TYPE\_DYNAMIC : [server.h](group__http__server.md#gga23d0077fb99827b25491111bd74d00afae9cdb0e1f8861de769a570399484587e)
- HTTP\_RESOURCE\_TYPE\_STATIC : [server.h](group__http__server.md#gga23d0077fb99827b25491111bd74d00afa1170c8c886888c5c0c5dcdc6c593a248)
- HTTP\_RESOURCE\_TYPE\_STATIC\_FS : [server.h](group__http__server.md#gga23d0077fb99827b25491111bd74d00afa05a9e5c3c4c1cce4894e6250220fea6e)
- HTTP\_RESOURCE\_TYPE\_WEBSOCKET : [server.h](group__http__server.md#gga23d0077fb99827b25491111bd74d00afa6691e6fe43d8ffbd1ef1fd5c59661866)
- http\_resource\_websocket\_cb\_t : [server.h](group__http__server.md#gaa51ec52c8960a37566d2ac77d624be93)
- HTTP\_RESPONSE : [parser.h](parser_8h.md#af9d6d304f8c255158175951b434cfa7aa132597b93208763e8e81c4a4a0e8a642)
- http\_response\_cb\_t : [client.h](group__http__client.md#ga9e079c737c325ee21a57e615b641f21a)
- HTTP\_SEARCH : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8ab5d284c93074084b1782b6b4f0c84cac)
- HTTP\_SERVER\_CONTENT\_TYPE : [server.h](group__http__server.md#ga709ddfe3f5ae5605b3399687f8be8c47)
- HTTP\_SERVER\_CONTENT\_TYPE\_FOREACH : [server.h](group__http__server.md#gad1ee2e803d6e38d54c344180a45a25c2)
- HTTP\_SERVER\_DATA\_ABORTED : [server.h](group__http__server.md#gga496accfe23add03417bdc98369d32ea8a85682febe2a08e3fe23eaa9b178db5dc)
- HTTP\_SERVER\_DATA\_FINAL : [server.h](group__http__server.md#gga496accfe23add03417bdc98369d32ea8a0f462355aede2440403f907d0c6af45a)
- HTTP\_SERVER\_DATA\_MORE : [server.h](group__http__server.md#gga496accfe23add03417bdc98369d32ea8a3827f7f5876ef09332845b445cd65231)
- HTTP\_SERVER\_REGISTER\_HEADER\_CAPTURE : [server.h](group__http__server.md#gae1710786f10729930cc6c220a19e2071)
- http\_server\_start() : [server.h](group__http__server.md#ga8125ef45732f81ec1c629a8f41e4c14d)
- http\_server\_stop() : [server.h](group__http__server.md#ga79f434b5bbc6d2a6ebc65a0c560730cf)
- HTTP\_SERVICE\_COUNT : [service.h](group__http__service.md#ga09fa08b24156d4a9540dbb525986d8cb)
- HTTP\_SERVICE\_DEFINE : [service.h](group__http__service.md#ga1aa8efe3622b5c9421a6257140c5d2c5)
- HTTP\_SERVICE\_DEFINE\_EMPTY : [service.h](group__http__service.md#ga8cfc7d2be962a1b0f44e389856097ac1)
- HTTP\_SERVICE\_FOREACH : [service.h](group__http__service.md#ga6144750de0b60baa3ae9c195a06622e7)
- HTTP\_SERVICE\_FOREACH\_RESOURCE : [service.h](group__http__service.md#ga97f21c80270bb79f32cf4d891e6c3eba)
- HTTP\_SERVICE\_RESOURCE\_COUNT : [service.h](group__http__service.md#gacadf010a47812c29313c914492774921)
- http\_should\_keep\_alive() : [parser.h](parser_8h.md#a903c39c3abea292860780856ba90d560)
- http\_status : [status.h](group__http__status__codes.md#gabc3b93f68c8bdd857ad32913628dfa8d)
- HTTP\_SUBSCRIBE : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a59dcf849dc60543ed33bdb9ccd476daf)
- HTTP\_TRACE : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8aeb1f77f6a1e09403704128086deecf6c)
- HTTP\_UNBIND : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a658daa8d3d7dbc917e2473eeb9a8590a)
- HTTP\_UNLINK : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8ab7485b3ada0c697c057054e785b443d4)
- HTTP\_UNLOCK : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a81202ae84a8fc30e687bc5059958c477)
- HTTP\_UNSUBSCRIBE : [method.h](group__http__methods.md#ggaacd5f203e33ac338ca5cb8f02a3ff3b8a930cc3d0451fc715afb07adb2267198f)
- HTTPS\_SERVICE\_DEFINE : [service.h](group__http__service.md#gad8468a96fd46ad7d8aaf48667d7ef092)
- HTTPS\_SERVICE\_DEFINE\_EMPTY : [service.h](group__http__service.md#ga4ec55524f40ac76a0abdcac3818dfa80)
- hvm\_get\_parameter() : [hvm.h](hvm_8h.md#aa4c66d130a846c3effc5ec3052d95f82)
- HVM\_PARAM\_CONSOLE\_EVTCHN : [params.h](params_8h.md#a00e5f65cf70ae90180529027092fe410)
- HVM\_PARAM\_CONSOLE\_PFN : [params.h](params_8h.md#a39fc3d97c0f343b7abf263ae5175b8ca)
- HVM\_PARAM\_STORE\_EVTCHN : [params.h](params_8h.md#a1048ebeefb4866be6781863b44026779)
- HVM\_PARAM\_STORE\_PFN : [params.h](params_8h.md#a9bce3ce400b9ffbaf311dd28a5e35b0a)
- hvm\_set\_parameter() : [hvm.h](hvm_8h.md#ae375499424094b2f6f8059160456b53e)
- HVMOP\_get\_param : [hvm\_op.h](hvm__op_8h.md#a96465a9f2e2437aa398c72bfc357d928)
- HVMOP\_set\_param : [hvm\_op.h](hvm__op_8h.md#a9714e13adc338e97a811ac1beba162bd)
- hwinfo\_clear\_reset\_cause() : [hwinfo.h](group__hwinfo__interface.md#gaeaa23e68c53eb6a2b56f06c74b83e613)
- hwinfo\_get\_device\_eui64() : [hwinfo.h](group__hwinfo__interface.md#ga0f5ab222b4f7e75a3e9d3650e954a036)
- hwinfo\_get\_device\_id() : [hwinfo.h](group__hwinfo__interface.md#ga197b58d995c77aae423527d0f8d9ff31)
- hwinfo\_get\_reset\_cause() : [hwinfo.h](group__hwinfo__interface.md#ga390c1c29088813ace17856ffa97d97b5)
- hwinfo\_get\_supported\_reset\_cause() : [hwinfo.h](group__hwinfo__interface.md#gaf0d345653c4fbb5f38a78aba766a6bb8)
- hwspinlock\_get\_max\_id() : [hwspinlock.h](group__hwspinlock__interface.md#gaac02b3349210f467641161dffd6dc363)
- hwspinlock\_lock() : [hwspinlock.h](group__hwspinlock__interface.md#ga5b4edd18441bb51012801e15447e860a)
- hwspinlock\_trylock() : [hwspinlock.h](group__hwspinlock__interface.md#ga7b7efadefb9e0810c462ee38c669ef99)
- hwspinlock\_unlock() : [hwspinlock.h](group__hwspinlock__interface.md#ga997a5bd42875e09c671960be9535bcc9)
- HYPERVISOR\_console\_io() : [hypercall.h](hypercall_8h.md#a122b9d9c3cba8c0339502e9b230acee4)
- HYPERVISOR\_event\_channel\_op() : [hypercall.h](hypercall_8h.md#a5b16a018f61a14ecf292227b84bce133)
- HYPERVISOR\_grant\_table\_op() : [hypercall.h](hypercall_8h.md#aa13c544d327b7c24987fd54089f10e78)
- HYPERVISOR\_hvm\_op() : [hypercall.h](hypercall_8h.md#ab33fe3d856e5aaaf38eb4c707fd5a684)
- HYPERVISOR\_memory\_op() : [hypercall.h](hypercall_8h.md#a49970e12da5e083aa26228880c23c1c2)
- HYPERVISOR\_sched\_op() : [hypercall.h](hypercall_8h.md#a2493899aa03561ca6161f541093390a7)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.1.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
